--- a/languagetool-language-modules/ast/src/main/resources/org/languagetool/MessagesBundle_ast.properties
+++ b/languagetool-language-modules/ast/src/main/resources/org/languagetool/MessagesBundle_ast.properties
@@ -70,7 +70,6 @@ en-US = Ingl\u00e9s americanu
 en-CA = Ingl\u00e9s canadianu
 en-NZ = Ingl\u00e9s (Nueva Zelanda)
 en-ZA = Ingl\u00e9s sudafricanu
-enterText = Por favor, escribi o apega'l testu pa comprobar nel cuadru d'enriba
 enterText2 = Por favor, amiesta equ\u00ed'l testu pa comprobar
 eo = Esperantu
 errorContext = Contestu:
@@ -89,12 +88,10 @@ guiGeneral = Xeneral
 guiProfiles = Profiles
 guiAddButton = Amestar...
 guiCancelButton = Encaboxar
-guiCheckComplete = Complet\u00f3se la comprobaci\u00f3n de LanguageTool.
 guiCloseButton = Zarrar
 guiConfigWindowTitle = Opciones de LanguageTool
 guiDemoText = Esti ye un exemplu de entrada de de datos p'amosate c\u00f3mo trabaya LanguageTool. Ten en cuenta, sicas\u00ed, de que nun incl\u00fai un correutor ortogr\u00e1ficu.
 guiLanguageManagerDialog = Xestor de M\u00f3dulos de Llingua
-guiMatchCount = Errores potenciales:
 guiMenuAbout = &Tocante a...
 guiMenuAddRules = Cargar ficheru de &regles
 guiMenuCheckClipboard = &Comprobar el testu del portapapeles
@@ -111,42 +108,10 @@ guiMotherTongue = La to llingua materna:
 guiNgramDir = direutoriu de datos pa ngram:
 guiNgramDirSelect = - afitar direutoriu (necesita reaniciar) -
 guiNgramHelp = Ayuda
-guiNoErrorsFound = Nun s''atoparon errores nin avisos (llingua: {0})
-guiNoErrorsFoundSelectedText = Nun s''atoparon errores nin avisos nel testu seleicion\u00e1u (llingua: {0})
 guiOKButton = &Aceutar
-guiOOoChangeButton = &Camudar
-guiOOoChangeAllButton = Correct All
-guiOOoAutoCorrectButton = Add to AutoCorrect
-guiOOoCloseButton = Zarrar
-guiOOoHelpButton = Help
-guiOOoIgnoreButton = Ignore Once
-guiOOoIgnoreAllButton = Inorar too
-guiOOoIgnoreRuleButton = Ignore Rule
-guiOOoaddToDictionary = Add to Dictionary
-guiOOosuggestions = Suggestions:
-# is part of selection: Check: All | Only Spelling | Only Grammar
-guiOOoCheckTypeLabel = Check:
-# is part of selection: Check: All | Only Spelling | Only Grammar
-guiOOoCheckAllButton = All
-# is part of selection: Check: All | Only Spelling | Only Grammar
-guiOOoCheckSpellingButton = Only Spelling
-# is part of selection: Check: All | Only Spelling | Only Grammar
-guiOOoCheckGrammarButton = Only Grammar
-guiOOoCheckOnlyRuleButton = Only Rule
 guiTurnOffRule = Deshabilitar Regla
-guiOOoOptionsButton = Opciones...
-guiOOoCheckDialogName = Spell and Grammar Check Dialog
-guiOOoChangeLanguageRequest = Change Language
-# is part of selection: Change Language: Of Match | Of Paragraph
-guiOOoChangeLanguageMatch = Of Match
-# is part of selection: Change Language: Of Match | Of Paragraph
-guiOOoChangeLanguageParagraph = Of Paragraph
-guiProgressWindowTitle = LanguageTool: Comprobando'l testu...
 guiRemoveButton = Desaniciar
-guiReplaceWindowTitle = Trocar testu
-guiReplaceWithOtherText = <otru testu>
 guiRunOnPort = Executar como sirvidor nel pue&rtu
-guiSelectionCheckComplete = Complet\u00f3se la comprobaci\u00f3n del testu seleicion\u00e1u en LanguageTool.
 guiTagText = &Etiquetar testu
 guiExamples = Exemplos:
 guiCurrentProfile = Current Profile:
@@ -157,33 +122,21 @@ guiDeleteProfile = Delete current Profile
 guiAddNewProfile = Add a new Profile:
 guiAddProfile = Add Profile
 guiImportProfile = Import Profile
-guiAddProfileName = Nome:
-guiAddProfileButton = Add
 guiUserProfile = Default Profile
 guiDisabledDefaultRules = Disabled Default Rules
 guiEnabledOptionalRules = Enabled Optional Rules
 guiUseDocumentLanguage = Use document language
 guiSetLanguageTo = Set language to
-guiCheckOnlyParagraph = Comprobar s\u00f3lo la frase que contien el p\u00e1rrafu (m\u00e1s r\u00e1pido)
-guiCheckFullText = Revisar el testu completu (m\u00e1s lento)
-guiCheckChapter = Check the chapter
-guiCheckNumParagraphs = Comprobar esti n\u00famberu de p\u00e1rrafos alredor de la frase (1 - 99):
 guiTextCheckMode = Text Check Mode
 guiParagraphCheckMode = Paragraph Check Mode 
 guiDeveloperModeCheck = Developer Mode - Select (-2, -1, 1, ..., 99):
-guiDoResetCheck = Volver a comprobar tolos p\u00e1rrafos dempu\u00e9s de cada cambiu nel testu
-guiNoMultiReset = Only if a single document is loaded
 # Use only one CPU core:
 guiOneThread = Use only one core
 guiIsMultiThread = Use more than one core (faster but high CPU load)
-guiUseTextLevelQueue = Check text level rules parallel
 guiNoBackgroundCheck = Disable background-processing check of text
-guiTextChangeLabel = After text change:
 guiSentenceExceedingRules = Sentence exceeding rules:
 guiTechnicalSettings = Technical settings:
-guiCheckFullTextAtFirst = Check full text after a document is loaded
 guiUseLtSpellChecker = Use LanguageTool spell checker
-guiSpellCheckerWarning = Heap space too small: LanguageTool spell checker is not used.\nSet the heap space to at least 1024 MB to use the LanguageTool spell checker
 guiNoSynonymsAsSuggestions = Do not use synonyms as suggestions (faster, regards only few rules)
 guiIncludeTrackedChanges = Include tracked changes
 guiActivateTempOffRules = Enable temporarily disabled rules
@@ -195,16 +148,21 @@ guiUseServer = Use server:
 guiUseServerExample = (http://Server_Name:Port) WITHOUT /v2
 guiUseServerWarning1 = Please use URL like http://Server_Name:Port or https://Server_Name:Port
 guiUseServerWarning2 = Don't add "/v2" or "/" at the end of URL
-guiUseServerSettings = Use server settings
-guiStyleRepeatedWordText = Distancia m\u00e1xima ente dos palabres repet\u00edes (0 - 5 frases):
 guiUsePremiumAccount = Use premium account (for premium user)
-guiLongSentencesText = Llargor m\u00e1ximu de les frases (5 - 100 pallabres):
 guiPremiumUsername = User name:
-guiLongParagraphsText = Llargor m\u00e1ximu de los p\u00e1rrafos (5 - 200 pallabres):
 guiPremiumApiKey = API Key:
-guiUnderlineColor = Color de sorray\u00e1u de categor\u00eda
-guiUColorHint = Los colores de sorray\u00e1u tienen encontu en LibreOffice versi\u00f3n 6.2.0 y mayor 
-guiUColorHint1 = Underline types are supported by LibreOffice version 6.3.0 and higher
+guiAiSupportSettings = AI Support Settings
+guiUseAiSupport = Use AI Support
+guiAiUrl = AI Server URL
+guiAiModel = AI Model
+guiAiApiKey = AI API Key
+guiAiAutoCorrect = Enable automatic Error detection
+guiAiShowStylisticChanges = Show also suggestions for stylistic changes
+guiAiExperimentalHint = NOTE: This feature is still very experimental.
+guiAiQualityHint = The speed and quality of the results depends on the installation and model used.
+guiStyleRepeatedWordText = Distancia m\u00e1xima ente dos palabres repet\u00edes (0 - 5 frases):
+guiLongSentencesText = Llargor m\u00e1ximu de les frases (5 - 100 pallabres):
+guiLongParagraphsText = Llargor m\u00e1ximu de los p\u00e1rrafos (5 - 200 pallabres):
 guiMarkSingleCharBold = underline a single character error by a bold wave
 guiUColorStyleLabel = Underline style and color:
 guiUColorChange = Camudar
@@ -262,7 +220,6 @@ pt-PT = Portugu\u00e9s (Portugal posAO)
 guiWarning = Avisu
 guiDuplicate = \u00a1Ficheru de regles duplic\u00e1u!
 ja = Xapon\u00e9s
-language_not_supported = Fallu: Sent\u00edmoslo, la llingua "{0}" del documentu nun ta sofitada por LanguageTool.
 http_server_start_failed = El sirvidor HTTP de LanguageTool nun pudo arrancar nel host "{0}", puertu {1}.\n\u00bfEscurque hai daqu\u00e9 usando y\u00e1 esi puertu?
 https_server_start_failed = El sirvidor HTTPS de LanguageTool nun pudo arrancar nel host "{0}", puertu {1}.\n\u00bfEscurque hai daqu\u00e9 usando y\u00e1 esi puertu?
 https_server_start_failed_unknown_reason = El sirvidor HTTPS de LanguageTool nun pudo aniciase nel host "{0}", puertu {1}
@@ -314,7 +271,6 @@ guiCollapseAll = Contrayer too
 guiAboutRuleMenu = Tocante a la regla...
 guiAboutRuleTitle = Tocante a la regla
 long_sentence_rule_desc = Llexibilid\u00e1: fras sobre {0} pallabres
-long_sentence_rule_msg = La fras tien sobre {0} pallabres de llargor, considera la so revisi\u00f3n
 long_sentence_rule_msg2 = Esta frase tien m\u00e1s de {0} pallabres de llargor na posici\u00f3n marcada, considera revisala
 long_paragraph_rule_desc = Facilid\u00e1 de llectura: p\u00e1rrafu de m\u00e1s de {0} pallabres
 long_paragraph_rule_msg = El p\u00e1rrafu tien m\u00e1s de {0} pallabres de llargor. considera revisalu
@@ -329,7 +285,6 @@ whitespace_at_begin_parapgraph_desc = Car\u00e1uter espaciu al principiu del p\u
 whitespace_at_begin_parapgraph_msg = Desanicia'l car\u00e1uter espaciu al principiu del p\u00e1rrafu
 repetition_paragraph_beginning_desc = Mesmu principiu de p\u00e1rrafu
 repetition_paragraph_beginning_last_msg = Mesmu principiu que'l p\u00e1rrafu anterior
-repetition_paragraph_beginning_next_msg = Mesmu principiu que'l p\u00e1rrafu siguiente
 punctuation_mark_paragraph_end_desc = Nun hai signu de puntuaci\u00f3n al final del p\u00e1rrafu
 punctuation_mark_paragraph_end_msg = A\u00f1ade un signu de puntuaci\u00f3n al final del p\u00e1rrafu
 guiLookAndFeelMenu = Mirar y sentir
@@ -343,8 +298,6 @@ statistics_suggest2_new = Please check whether ''{0}'' ({1}) might be the correc
 statistics_suggest3_new = Please check whether ''{0}'' might be the correct word here instead of ''{1}''.
 statistics_suggest4_new = Please check whether ''{0}'' might be the correct word here instead of ''{1}'' ({2}).
 statistics_suggest_short_desc = Possible word confusion
-neural_network_suggest_with_description = La nuesa rede neural camienta que ''{0}'' ({1}) puede ser la palabra correuta equ\u00ed, non ''{2}'' ({3}). Rev\u00edsalo, por favor.
-neural_network_suggest = La nuesa rede neural camienta que ''{0}'' puede ser la palabra correuta equ\u00ed, non ''{1}''. Rev\u00edsalo, por favor.
 unsupportedWarning = Nota: Esta llingua nun ta totalmente sofitada en LanguageTool y\u00e1 que nun hai naide que la caltenga activamente. <a href="https://languagetool.org/contribute/">Mira c\u00f3mo pues ayudar.</a>
 token = S\u00edmbolu
 disambiguatorLog = Rexistru de desambiguaci\u00f3n
@@ -362,76 +315,7 @@ sr-BA = Serbiu (Bosnia)
 sr-HR = Serbiu (Croacia)
 sr-ME = Serbiu (Montenegru)
 too_many_errors = (algam\u00f3se la llende de suxerencies)
-loRemoteSwitchToLocal = Connection refused: \nSwitch to internal LanguageTool application
 loRemoteInfoDefaultServer = The extension will check your text by sending it to LanguageTool.org over an encrypted connection. Your text will not be stored.
 loRemoteInfoOtherServer = The extension will check your text by sending it to the remote server "{0}". Contact the server administrator for information about privacy protection.
 loMenuRemoteInfo = Remote Check Hint
-loMenuResetIgnorePermanent = Reset Ignore Permanent
-loMenuEnableBackgroundCheck = Enable background check
-loMenuDisableBackgroundCheck = Disable background check
-loMenuGrammarCheckAgain = Recheck Document
-loMenuNextError = Next spelling or grammar mistake
-loMenuChangeProfiles = Change Profile to
-loContextMenuRenewMarkups = Renew grammar markups
-loContextMenuOptions = Opciones de LanguageTool
-loContextMenuDeactivateRule = Deactivate Rule
-loContextMenuIgnorePermanent = Ignore Permanent
-loContextMenuActivateRule = Activate Rule
-loContextMenuAddToDictionary = Add to Dictionary
-loContextMenuGrammarCheck = Grammar Check ...
-loContextMenuRefreshCheck = Refresh Check Results
-loContextMenuAbout = About
-loDialogLanguageHelp = The language of the paragraph shown in the editor element is displayed.\nIf you want to change the language of the underlined match or the whole paragraph, choose the new language first.\nAfter a new language is selected the "Change Language" button will be activated.
-loDialogChangeLanguageHelp = The list is activated, after a new language was selected.\nClick on the list to choose:\n - change the language of the match (underlined in the editor element)\n - the whole paragraph
-loDialogMatchDescriptionHelp = Gives a description of the possible error found by the spell or grammar checker.
-loDialogMatchParagraphHelp = Display the paragraph in which the match was found. The possible error is underlined and displayed in the defined color (spelling errors: red, grammatical errors: blue, stylistic errors: green, colors can be defined by the user in the LT option dialog).\nThe paragraph can be edited by the user.\nPress the "Change" button after editing to change the text of the document.
-loDialogSuggestionsHelp = The list of suggestions for the match is displayed.\n- Select a suggestion and press the "Change" button to replace the underlined match by the selected suggestion.\nHint: If you had changed the text in the editor element, the changed text will be replaced inside the document instead of the suggestion.
-loDialogCheckTypeHelp = Select to check:\n- only spelling\n- only grammar (and style)\n- all (spelling, grammar and style)
-loDialogHelpButtonHelp = Opens the help dialog
-loDialogOptionsButtonHelp = Opens the LT options dialog.\nThe Options can be changed by the user and saved by clicking the "OK" button of the dialog.
-loDialogUndoButtonHelp = Undoes the last action.\nUp to 20 actions can be undone.
-loDialogCloseButtonHelp = Closes the spell and grammar check dialog.
-loDialogMoreButtonHelp = For grammatical errors only:\n Opens a link in a browser to get advanced information about the error.
-loDialogIgnoreButtonHelp = Ignores the current match\n (The match is ignored till the next change of paragraph).
-loDialogIgnoreAllButtonHelp = Ignores all similar matches in the document:\n- For spelling errors: Ignore all words like the misspelled one\n- For grammatical errors: Ignore the rule\nThe words or rules are ignored till the end of the session.
-loDialogIgnorePermanentButtonHelp = Ignores the current match\n The match is ignored also after reopening the document\n until the reset ignore permanent button is clicked.
-loDialogResetIgnorePermanentButtonHelp = The permanent ignored matches will be reset.
-loDialogDeactivateRuleButtonHelp = For grammatical errors only:\n The rule is deactivated permanently\n (Can be activated again by LT option dialog).
-loDialogActivateRuleButtonHelp = Reactivate deactivated rules.
-loDialogAddToDictionaryButtonHelp = For spelling errors only:\n Choose a dictionary from the list.\n The unknown word is added to the chosen dictionary.
-loDialogChangeButtonHelp = Changes the text of the shown paragraph.\nThere are two modes of operation:\n1. If the paragraph shown in the editor element was changed by the user, the original text of the paragraph is replaced with the new text.\n2. If the paragraph shown in the editor element was not changed by the user, but at least one suggestion exist, the underlined match is replaced by the selected suggestion.\nIf there is no suggestion and no change in the editor field, the button is deactivated.
-loDialogChangeAllButtonHelp = For spelling errors only:\n Changes all misspelled words in the document to the selected suggestion.
-loDialogAutoCorrectButtonHelp = Changes all misspelled words in the document to the selected suggestion.\nAdd word-suggestion-pair to autoCorrect.
-loDialogHelpText = The spell and grammar check dialog uses the LibreOffice/OpenOffice spell check and the grammar and style check of LanguageTool.\nTo get help for single elements of the dialog, move the mouse cursor over the element in question.
-loDialogErrorCloseMessage = An internal error has occurred.\nThe LT spell and grammar check dialog will be closed.\nPlease try it again. 
-loDialogCacheLabel = Cache status
-loDialogDoNotCheck = Don't check 
-loCheckStatusInitialization = Initialization
-loCheckStatusCheck = Check
-loLabelCheckProgress = Checked text:
-loBusyMessage = LibreOffice is busy. \nPlease try later.
-loWaitMessage = Initializing dialog. \nPlease wait.
-loExtHeapMessage = LanguageTool memory limit reached. Switching to one paragraph mode. Some text-level rules will not work properly.
-loExtSwitchOffMessage = LanguageTool is switched off. Please switch it on to run this function.
-loDialogUnsupported = Grammar check doesn't support included Objects like graphics, pictures or text objects. \nPlease place the cursor into the text and start the dialog again.
-loNextErrorUnsupported = Grammar check doesn't support included Objects like graphics, pictures or text objects. \nPlease place the cursor into the text and search for next Error again.
-loNoGrammarCheckWarning = It seems the automatic grammar check is disabled. Please enable "Check grammar as you type" at "Tools"/"Options"/"Language Settings"/"Writing Aids" and restart LibreOffice/OpenOffice.
-loAboutLtDesc = Your writing assistant
-loCopyToClipBoardDesc = Copy to Clipboard
-loOpenLogFolderDesc = Open log folder
-loVersionInformation = Version Information
-loStatisticalAnalysis = Statistical Analysis
-loStatisticalAnalysisCloseButton = Close
-loStatisticalAnalysisDefaultButton = Default
-loStatisticalAnalysisSetButton = Set
-loStatisticalAnalysisWithoutDirectSpreech = Without direct speech
-loStatisticalAnalysisChapterLabel = Chapter
-loStatisticalAnalysisSubchapterLabel = Subchapter
-loStatisticalAnalysisMostUsedWords = Most used words
-loStatisticalAnalysisOptionsLabel = Options
-loStatisticalAnalysisLevels = Levels
-loStatisticalAnalysisIgnoreWordButton = Ignore word
-loStatisticalAnalysisResetIgnoredWordsButton = Reset ignored words
-loStatisticalAnalysisEntireDocument = Entire document
-loStatisticalAnalysisNotAnalyzed = Not analyzed
-loStatisticalAnalysisNumber = Number
+crh = Crimean Tatar
