--- a/languagetool-language-modules/gl/src/main/resources/org/languagetool/MessagesBundle_gl.properties
+++ b/languagetool-language-modules/gl/src/main/resources/org/languagetool/MessagesBundle_gl.properties
@@ -70,7 +70,6 @@ en-US = Ingl\u00e9s (estadounidense)
 en-CA = Ingl\u00e9s (canadense)
 en-NZ = Ingl\u00e9s (neoceland\u00e9s)
 en-ZA = Ingl\u00e9s (surafricano)
-enterText = Escriba ou pegue o texto que desexe corrixir na \u00e1rea superior
 enterText2 = Insira aqu\u00ed o texto que desexe corrixir
 eo = Esperanto
 errorContext = Contexto:
@@ -89,12 +88,10 @@ guiGeneral = Xeral
 guiProfiles = Perf\u00eds
 guiAddButton = Engadir...
 guiCancelButton = Cancelar
-guiCheckComplete = Completouse a correcci\u00f3n de LanguageTool.
 guiCloseButton = Pechar
 guiConfigWindowTitle = Opci\u00f3ns de LanguageTool
 guiDemoText = Esto vai a ser unha mostra de de exenplo para amossar c\u00f3mo funciona...o LanguageTool.
 guiLanguageManagerDialog = M\u00f3dulo de xesti\u00f3n de regras
-guiMatchCount = Erros potenciais:
 guiMenuAbout = &Acerca de...
 guiMenuAddRules = Cargar ficheiro de &regras
 guiMenuCheckClipboard = &Corrixir texto do portaretallos
@@ -111,42 +108,10 @@ guiMotherTongue = A s\u00faa lingua materna:
 guiNgramDir = Directorio de datos de n-gramas:
 guiNgramDirSelect = - definir o directorio (debe reiniciar) -
 guiNgramHelp = Axuda
-guiNoErrorsFound = Non se atoparon erros nin advertencias (idioma: {0})
-guiNoErrorsFoundSelectedText = Non se atoparon erros ou advertencias no texto seleccionado (idioma: {0})
 guiOKButton = &Aceptar
-guiOOoChangeButton = Corrixir
-guiOOoChangeAllButton = Corrixir todo
-guiOOoAutoCorrectButton = Engadir \u00e1 correcci\u00f3n autom\u00e1tica
-guiOOoCloseButton = Pechar
-guiOOoHelpButton = Axuda
-guiOOoIgnoreButton = Ignorar unha vez
-guiOOoIgnoreAllButton = Ignorar todos
-guiOOoIgnoreRuleButton = Ignorar regra
-guiOOoaddToDictionary = Engadir ao dicionario
-guiOOosuggestions = Suxesti\u00f3ns:
-# is part of selection: Check: All | Only Spelling | Only Grammar
-guiOOoCheckTypeLabel = Corrixir:
-# is part of selection: Check: All | Only Spelling | Only Grammar
-guiOOoCheckAllButton = Todo
-# is part of selection: Check: All | Only Spelling | Only Grammar
-guiOOoCheckSpellingButton = S\u00f3 a ortograf\u00eda
-# is part of selection: Check: All | Only Spelling | Only Grammar
-guiOOoCheckGrammarButton = S\u00f3 a gram\u00e1tica
-guiOOoCheckOnlyRuleButton = S\u00f3 regra
 guiTurnOffRule = Desactivar regra
-guiOOoOptionsButton = Opci\u00f3ns...
-guiOOoCheckDialogName = Caixa de di\u00e1logo de correcci\u00f3n ortogr\u00e1fica e gramatical
-guiOOoChangeLanguageRequest = Cambiar idioma
-# is part of selection: Change Language: Of Match | Of Paragraph
-guiOOoChangeLanguageMatch = Da coincidencia
-# is part of selection: Change Language: Of Match | Of Paragraph
-guiOOoChangeLanguageParagraph = Do par\u00e1grafo
-guiProgressWindowTitle = LanguageTool: Estase a revisar o texto...
 guiRemoveButton = Eliminar
-guiReplaceWindowTitle = Substitu\u00edr o texto
-guiReplaceWithOtherText = <outro texto>
 guiRunOnPort = Executar como servidor no por&to
-guiSelectionCheckComplete = LanguageTool completou a correcci\u00f3n do texto seleccionado.
 guiTagText = Etiquetar o texto
 guiExamples = Exemplos:
 guiCurrentProfile = Perfil actual:
@@ -157,33 +122,21 @@ guiDeleteProfile = Eliminar perfil actual
 guiAddNewProfile = Engadir un perfil novo:
 guiAddProfile = Engadir perfil
 guiImportProfile = Importar perfil
-guiAddProfileName = Nome:
-guiAddProfileButton = Engadir
 guiUserProfile = Perfil predeterminado
 guiDisabledDefaultRules = Regras predeterminadas desactivadas
 guiEnabledOptionalRules = Regras opcionais activadas
 guiUseDocumentLanguage = Empregar idioma do documento
 guiSetLanguageTo = Estabelecer o idioma
-guiCheckOnlyParagraph = Revisar s\u00f3 o par\u00e1grafo que cont\u00e9n a oraci\u00f3n (o m\u00e1is r\u00e1pido)
-guiCheckFullText = Revisar o texto completo (o m\u00e1is lento)
-guiCheckChapter = Revisar o cap\u00edtulo
-guiCheckNumParagraphs = Revisar o n\u00famero de par\u00e1grafos que rodean a oraci\u00f3n (1 - 99):
 guiTextCheckMode = Modo de correcci\u00f3n de texto
 guiParagraphCheckMode = Modo de correcci\u00f3n de par\u00e1grafo 
 guiDeveloperModeCheck = Modo de desenvolvemento - Seleccione (-2, -1, 1, ..., 99):
-guiDoResetCheck = Revisar todos os par\u00e1grafos outra vez despois de cada cambio de texto
-guiNoMultiReset = S\u00f3 se se carga un \u00fanico documento
 # Use only one CPU core:
 guiOneThread = Empregar s\u00f3 un n\u00facleo
 guiIsMultiThread = Empregar m\u00e1is de un n\u00facleo (m\u00e1is r\u00e1pido mais de maior carga sobre a CPU)
-guiUseTextLevelQueue = Revisar as regras de nivel do texto en paralelo
 guiNoBackgroundCheck = Desactivar a correcci\u00f3n do texto en segundo plano
-guiTextChangeLabel = Despois de cambio de texto:
 guiSentenceExceedingRules = Regras superiores \u00e1 oraci\u00f3n:
 guiTechnicalSettings = Configuraci\u00f3n t\u00e9cnica:
-guiCheckFullTextAtFirst = Revisar o texto enteiro logo de cargar un documento
 guiUseLtSpellChecker = Empregar a correcci\u00f3n ortogr\u00e1fica de LanguageTool
-guiSpellCheckerWarning = Heap space too small: LanguageTool spell checker is not used.\nSet the heap space to at least 1024 MB to use the LanguageTool spell checker
 guiNoSynonymsAsSuggestions = Non empregar sin\u00f3nimos como suxesti\u00f3ns (m\u00e1is r\u00e1pido, considera s\u00f3 poucas regras)
 guiIncludeTrackedChanges = Inclu\u00edr cambios seguidos
 guiActivateTempOffRules = Activar regras desactivadas temporalmente
@@ -195,16 +148,21 @@ guiUseServer = Empregar servidor:
 guiUseServerExample = (http://Nome_do_servidor:Porto) SEN /v2
 guiUseServerWarning1 = Empregue un URL deste estilo: http://Nome_do_Servidor:Porto ou https://Nome_do_Servidor:Porto
 guiUseServerWarning2 = Non engada \u00ab/v2\u00bb ou \u00ab/\u00bb no final do URL
-guiUseServerSettings = Empregar a configuraci\u00f3n do servidor
-guiStyleRepeatedWordText = Distancia m\u00e1xima entre 2 palabras repetidas (0 - 5 oraci\u00f3ns):
 guiUsePremiumAccount = Empregar conta premium (para usuarios premium)
-guiLongSentencesText = Tama\u00f1o m\u00e1ximo das oraci\u00f3ns (5-100 palabras):
 guiPremiumUsername = Nome de usuario:
-guiLongParagraphsText = Tama\u00f1o m\u00e1ximo dos par\u00e1grafos (5-200 palabras):
 guiPremiumApiKey = Chave da API:
-guiUnderlineColor = Cor de subli\u00f1ado da categor\u00eda
-guiUColorHint = As cores de subli\u00f1ado son pos\u00edbeis desde a versi\u00f3n 6.2.0 do LibreOffice e posteriores
-guiUColorHint1 = Underline types are supported by LibreOffice version 6.3.0 and higher
+guiAiSupportSettings = AI Support Settings
+guiUseAiSupport = Use AI Support
+guiAiUrl = AI Server URL
+guiAiModel = AI Model
+guiAiApiKey = AI API Key
+guiAiAutoCorrect = Enable automatic Error detection
+guiAiShowStylisticChanges = Show also suggestions for stylistic changes
+guiAiExperimentalHint = NOTE: This feature is still very experimental.
+guiAiQualityHint = The speed and quality of the results depends on the installation and model used.
+guiStyleRepeatedWordText = Distancia m\u00e1xima entre 2 palabras repetidas (0 - 5 oraci\u00f3ns):
+guiLongSentencesText = Tama\u00f1o m\u00e1ximo das oraci\u00f3ns (5-100 palabras):
+guiLongParagraphsText = Tama\u00f1o m\u00e1ximo dos par\u00e1grafos (5-200 palabras):
 guiMarkSingleCharBold = subli\u00f1ar os erros de un \u00fanico car\u00e1cter cunha onda grosa
 guiUColorStyleLabel = Estilo e cor do subli\u00f1ado:
 guiUColorChange = Cambiar
@@ -262,7 +220,6 @@ pt-PT = Portugu\u00e9s (Portugal postAO)
 guiWarning = Atenci\u00f3n
 guiDuplicate = Ficheiro de regras duplicado!
 ja = Xapon\u00e9s
-language_not_supported = Erro: desculpe, o idioma \u00ab{0}\u00bb do documento non ten soporte en LanguageTool.
 http_server_start_failed = Non foi pos\u00edbel arrancar o servidor de HTTP de LanguageTool en \u00ab{0}\u00bb, no porto {1}. \nPode ser que xa se estea a executar algo nese porto?
 https_server_start_failed = Non foi pos\u00edbel arrancar o servidor de HTTP de LanguageTool en \u00ab{0}\u00bb, porto {1}. \nPode ser que xa se estea a executar algo nese porto?
 https_server_start_failed_unknown_reason = Non foi pos\u00edbel arrancar o servidor de HTTPS de LanguageTool en \u00ab{0}\u00bb, porto {1}
@@ -314,7 +271,6 @@ guiCollapseAll = Contraer todo
 guiAboutRuleMenu = Acerca da regra...
 guiAboutRuleTitle = Acerca da regra
 long_sentence_rule_desc = Lexibilidade: oraci\u00f3n de m\u00e1is de {0} palabras
-long_sentence_rule_msg = A oraci\u00f3n ten m\u00e1is de {0} palabras, sopese a s\u00faa revisi\u00f3n
 long_sentence_rule_msg2 = Esta oraci\u00f3n xa ten {0} palabras na posici\u00f3n marcada. Considere a posibilidade de partila, xa que as oraci\u00f3ns m\u00e1is curtas facilitan a lectura.
 long_paragraph_rule_desc = Lexibilidade: par\u00e1grafo de m\u00e1is de {0} palabras
 long_paragraph_rule_msg = O par\u00e1grafo sobrepasa as {0} palabras de longo. Considere unha revisi\u00f3n.
@@ -329,7 +285,6 @@ whitespace_at_begin_parapgraph_desc = Car\u00e1cter de espazo ao comezo do par\u
 whitespace_at_begin_parapgraph_msg = Elimine o car\u00e1cter de espazo ao comezo do par\u00e1grafo.
 repetition_paragraph_beginning_desc = O mesmo comezo do par\u00e1grafo
 repetition_paragraph_beginning_last_msg = O mesmo comezo como derradeiro par\u00e1grafo
-repetition_paragraph_beginning_next_msg = O mesmo comezo que o par\u00e1grafo seguinte
 punctuation_mark_paragraph_end_desc = Sen signo de puntuaci\u00f3n ao final do par\u00e1grafo
 punctuation_mark_paragraph_end_msg = Engada un signo de puntuaci\u00f3n ao final do par\u00e1grafo.
 guiLookAndFeelMenu = Aparencia
@@ -343,8 +298,6 @@ statistics_suggest2_new = Comprobe se \u00ab{0}\u00bb ({1}) non ser\u00eda a pal
 statistics_suggest3_new = Comprobe se \u00ab{0}\u00bb non ser\u00eda a palabra correcta aqu\u00ed no canto de \u00ab{1}\u00bb.
 statistics_suggest4_new = Comprobe se \u00ab{0}\u00bb non ser\u00eda a palabra correcta aqu\u00ed no canto de \u00ab{1}\u00bb ({2}).
 statistics_suggest_short_desc = Pos\u00edbel confusi\u00f3n entre palabras
-neural_network_suggest_with_description = A nosa rede neuronal pensa que \u00ab{0}\u00bb ({1}) poder\u00eda ser a palabra correcta aqu\u00ed en vez de \u00ab{2}\u00bb ({3}). Compr\u00f3beo, por favor.
-neural_network_suggest = A nosa rede neuronal pensa que \u00ab{0}\u00bb poder\u00eda ser a palabra correcta aqu\u00ed en vez de \u00ab{1}\u00bb. Compr\u00f3beo, por favor.
 unsupportedWarning = Nota: LanguageTool non \u00e9 completamente compat\u00edbel con este idioma, porque non hai ningu\u00e9n que o mante\u00f1a de maneira activa. <a href="https://languagetool.org/contribute/">Inf\u00f3rmese sobre como colaborar.</a>
 token = Token
 disambiguatorLog = Rexistro de desambiguaci\u00f3n
@@ -362,76 +315,7 @@ sr-BA = Serbio (Bosnia)
 sr-HR = Serbio (Croacia)
 sr-ME = Serbio (Montenegro)
 too_many_errors = (atinxiuse o l\u00edmite de suxesti\u00f3ns)
-loRemoteSwitchToLocal = Conexi\u00f3n rexeitada: \nPase \u00e1 aplicaci\u00f3n interna de LanguageTool
 loRemoteInfoDefaultServer = A extensi\u00f3n revisar\u00e1 o texto envi\u00e1ndoo a LanguageTool.org a trav\u00e9s dunha conexi\u00f3n cifrada. O texto non ser\u00e1 almacenado.
 loRemoteInfoOtherServer = A extensi\u00f3n revisar\u00e1 o texto envi\u00e1ndoo ao servidor remoto \u00ab{0}\u00bb. Contacte coa administraci\u00f3n do sistema para informaci\u00f3n sobre a protecci\u00f3n da privacidade.
 loMenuRemoteInfo = Remote Check Hint
-loMenuResetIgnorePermanent = Restaurar Ignorar permanente
-loMenuEnableBackgroundCheck = Activar a correcci\u00f3n en segundo plano
-loMenuDisableBackgroundCheck = Desactivar a correcci\u00f3n en segundo plano
-loMenuGrammarCheckAgain = Comprobar o documento de novo
-loMenuNextError = Erro ortogr\u00e1fico ou gramatical seguinte
-loMenuChangeProfiles = Cambiar pefil a
-loContextMenuRenewMarkups = Renovar marcaxes gramaticais
-loContextMenuOptions = Opci\u00f3ns de LanguageTool
-loContextMenuDeactivateRule = Desactivar regra
-loContextMenuIgnorePermanent = Ignorar permanente
-loContextMenuActivateRule = Activar regra
-loContextMenuAddToDictionary = Engadir ao dicionario
-loContextMenuGrammarCheck = Correcci\u00f3n gramatical...
-loContextMenuRefreshCheck = Refrescar os resultados da comprobaci\u00f3n
-loContextMenuAbout = Acerca de
-loDialogLanguageHelp = M\u00f3strase o idioma do par\u00e1grafo que aparece no elemento editor.\nSe desexa cambiar o idioma da coincidencia subli\u00f1ada ou o par\u00e1grafo enteiro, escolla primeiro o novo idioma.\nO bot\u00f3n \u00abCambiar idioma\u00bb act\u00edvase unha vez seleccionado un idioma novo.
-loDialogChangeLanguageHelp = A lista est\u00e1 activada unha vez seleccionado un idioma novo. \nPrema na lista para escoller:\n - cambiar o idioma da coincidencia (subli\u00f1ada no elemento editor) \n - o par\u00e1grafo enteiro
-loDialogMatchDescriptionHelp = D\u00e1 unha descrici\u00f3n do pos\u00edbel erro atopado polos correctores ortogr\u00e1fico ou gramatical.
-loDialogMatchParagraphHelp = Mostrar o par\u00e1grafo no que se atopou a coincidencia. O pos\u00edbel erro aparece subli\u00f1ado na cor definida (erros ortogr\u00e1ficos: vermello, erros gramaticais: azul, erros estil\u00edsticos: verde; o usuario pode escoller as cores no di\u00e1logo de configuraci\u00f3n de LT). \nO usuario pode editar o par\u00e1grafo. \nPrema no bot\u00f3n \u00abCambiar\u00bb despois de editar para cambiar o texto do documento.
-loDialogSuggestionsHelp = M\u00f3strase a lista de suxesti\u00f3ns para a coincidencia. \n- Seleccione unha suxesti\u00f3n e prema no bot\u00f3n \u00abCambiar\u00bb para substitu\u00edr a coincidencia subli\u00f1ada pola suxesti\u00f3n seleccionada. \nSuxesti\u00f3n: Se xa cambiou o texto no elemento editor, o texto cambiado ser\u00e1 o que substit\u00faa no documento no canto da suxesti\u00f3n.
-loDialogCheckTypeHelp = Seleccione para corrixir: \n- s\u00f3 a ortograf\u00eda \n- s\u00f3 a gram\u00e1tica (e o estilo) \n- todo (ortograf\u00eda, gram\u00e1tica e estilo)
-loDialogHelpButtonHelp = Abre o di\u00e1logo de axuda
-loDialogOptionsButtonHelp = Abre o di\u00e1logo de opci\u00f3ns de LT. \nO usuario pode cambiar e gardar as opci\u00f3ns premendo no bot\u00f3n \u00abAceptar\u00bb do di\u00e1logo.
-loDialogUndoButtonHelp = Desfai a \u00faltima acci\u00f3n. \n\u00c9 pos\u00edbel desfacer at\u00e9 20 acci\u00f3ns.
-loDialogCloseButtonHelp = Pecha o di\u00e1logo de correcci\u00f3n ortogr\u00e1fica e gramatical.
-loDialogMoreButtonHelp = S\u00f3 para erros gramaticais: \n Abre unha ligaz\u00f3n nun navegador para obter informaci\u00f3n avanzada sobre o erro.
-loDialogIgnoreButtonHelp = Ignora a coincidencia actual \n (Ign\u00f3rase a coincidencia at\u00e9 o seguinte cambio de par\u00e1grafo).
-loDialogIgnoreAllButtonHelp = Ignora as demais coincidencias semellantes do documento: \n- Nos erros ortogr\u00e1ficos: Ignorar todas as palabras iguais \u00e1 incorrecta \n- Nos erros gramaticais: Ignorar a regra \nAs palabras ou regras ign\u00f3ranse at\u00e9 o final da sesi\u00f3n.
-loDialogIgnorePermanentButtonHelp = Ignora a coincidencia actual \n A coincidencia tam\u00e9n se ignora ao reabrir o documento \n at\u00e9 que se prema o bot\u00f3n de ignorar permanente
-loDialogResetIgnorePermanentButtonHelp = Restauraranse as coincidencias ignoradas permanentemente.
-loDialogDeactivateRuleButtonHelp = S\u00f3 nos erros gramaticais: \n A regra desact\u00edvase permanentemente \n (\u00c9 pos\u00edbel activala de novo na caixa de di\u00e1logo de opci\u00f3ns de LT)
-loDialogActivateRuleButtonHelp = Reactivar regras desactivadas.
-loDialogAddToDictionaryButtonHelp = S\u00f3 nos erros ortogr\u00e1ficos: \n Escoller un dicionario da lista. \n A palabra desco\u00f1ecida eng\u00e1dese ao dicionario escollido.
-loDialogChangeButtonHelp = Cambia o texto do par\u00e1grafo mostrado. \nHai dous modos de funcionamento: \n1. Se o par\u00e1grafo que se mostra no elemento editor foi cambiado polo usuario, o texto orixinal de par\u00e1grafo substit\u00faese polo texto novo. \n2. Se o par\u00e1grafo que se mostra no elemento editor non fose cambiado polo usuario, mais existise cando menos unha suxesti\u00f3n, a coincidencia subli\u00f1ada substit\u00faese pola suxesti\u00f3n seleccionada.\nDe non haber suxesti\u00f3n nin cambio no campo do editor, o bot\u00f3n desact\u00edvase.
-loDialogChangeAllButtonHelp = S\u00f3 nos erros ortogr\u00e1ficos: \n Cambia todas as palabras mal escritas do documento pola suxesti\u00f3n seleccionada.
-loDialogAutoCorrectButtonHelp = Cambia todas as palabras mal escritas do documento para a suxesti\u00f3n seleccionada. \nEngadir par de suxesti\u00f3ns de palabras \u00e1 correcci\u00f3n autom\u00e1tica.
-loDialogHelpText = A caixa de di\u00e1logo de correcci\u00f3n ortogr\u00e1fica e gramatical emprega a correcci\u00f3n ortogr\u00e1fica do LibreOffice/OpenOffice e a correcci\u00f3n de gram\u00e1tica e de estilo de LanguageTool.\nPara obter axuda sobre elementos individuais da caixa de di\u00e1logo, mova o cursor do rato sobre o elemento en cuesti\u00f3n.
-loDialogErrorCloseMessage = Produciuse un erro interno. \nVaise pechar a caixa de di\u00e1logo de correcci\u00f3n ortogr\u00e1fica e gramatical de LT. \nT\u00e9nteo de novo. 
-loDialogCacheLabel = Estado da memoria cach\u00e9
-loDialogDoNotCheck = Non comprobar. 
-loCheckStatusInitialization = Inicializaci\u00f3n
-loCheckStatusCheck = Comprobar
-loLabelCheckProgress = Texto comprobado:
-loBusyMessage = O LibreOffice est\u00e1 ocupado.\nT\u00e9nteo m\u00e1is tarde.
-loWaitMessage = A inicializar a caixa de di\u00e1logo.\nAgarde un momenti\u00f1o.
-loExtHeapMessage = Atinxiuse o l\u00edmite de memoria de LanguageTool. P\u00e1sase ao modo de un \u00fanico par\u00e1grafo. Algunhas regras de nivel de texto poder\u00edan non funcionar axeitadamente.
-loExtSwitchOffMessage = LanguageTool est\u00e1 desactivado. Act\u00edveo para executar esta funci\u00f3n.
-loDialogUnsupported = A correcci\u00f3n gramatical non admite Obxectos inclu\u00eddos, como gr\u00e1ficos, imaxes ou obxectos de texto. \nColoque o cursor dentro do texto e inicie a caixa de di\u00e1logo de novo.
-loNextErrorUnsupported = A correcci\u00f3n gramatical non admite Obxectos inclu\u00eddos, como gr\u00e1ficos, imaxes ou obxectos de texto.  \nColoque o cursor dentro do texto e busque o seguinte Erro de novo.
-loNoGrammarCheckWarning = A correcci\u00f3n gram\u00e1tica autom\u00e1tica semella estar desactivada. Active \u00abCorrixir a gram\u00e1tica mentres se escribe\u00bb en \u00abFerramentas\u00bb/\u00abOpci\u00f3ns\u00bb/\u00abConfiguraci\u00f3n dos idiomas\u00bb/\u00abAxudas \u00e1 escrita\u00bb e reinicie o LibreOffice/OpenOffice.
-loAboutLtDesc = O seu asistente para escribir
-loCopyToClipBoardDesc = Copiar no portapapeis
-loOpenLogFolderDesc = Abrir cartafol de rexistro
-loVersionInformation = Informaci\u00f3n da versi\u00f3n
-loStatisticalAnalysis = An\u00e1lise estat\u00edstica
-loStatisticalAnalysisCloseButton = Pechar
-loStatisticalAnalysisDefaultButton = Predeterminado
-loStatisticalAnalysisSetButton = Estabelecer
-loStatisticalAnalysisWithoutDirectSpreech = Sen fala directa
-loStatisticalAnalysisChapterLabel = Cap\u00edtulo
-loStatisticalAnalysisSubchapterLabel = Subcap\u00edtulo
-loStatisticalAnalysisMostUsedWords = Palabras m\u00e1is frecuentes
-loStatisticalAnalysisOptionsLabel = Opci\u00f3ns
-loStatisticalAnalysisLevels = Niveis
-loStatisticalAnalysisIgnoreWordButton = Ignorar palabra
-loStatisticalAnalysisResetIgnoredWordsButton = Restaurar palabras ignoradas
-loStatisticalAnalysisEntireDocument = Documento enteiro
-loStatisticalAnalysisNotAnalyzed = Sen analizar
-loStatisticalAnalysisNumber = N\u00famero
+crh = Crimean Tatar
