--- a/languagetool-language-modules/nl/src/main/resources/org/languagetool/MessagesBundle_nl.properties
+++ b/languagetool-language-modules/nl/src/main/resources/org/languagetool/MessagesBundle_nl.properties
@@ -70,7 +70,6 @@ en-US = Engels (Amerika)
 en-CA = Engels (Canada)
 en-NZ = Engels (Nieuw-Zeeland)
 en-ZA = Engels (Zuid-Afrika)
-enterText = Voer s.v.p. in het bovenste vak de te controleren tekst in
 enterText2 = Voer s.v.p. hier de te controleren tekst in
 eo = Esperanto
 errorContext = Context:
@@ -89,12 +88,10 @@ guiGeneral = Algemeen
 guiProfiles = Profielen
 guiAddButton = Voeg toe...
 guiCancelButton = Annuleren
-guiCheckComplete = LanguageTool-controle gereed.
 guiCloseButton = Sluit
 guiConfigWindowTitle = LanguageTool-opties
 guiDemoText = Dit is een voorbeeld om om te laten zien hoe LanguageTool werkt. \n\n\n(De voor het Nederlands ingebouwde regels zijn gebouwd door OpenTaal en TaalTik en ge\u00efnspireerd door de vele adviezen van taalinstituten, zoals gepubliceerd op internet.)
 guiLanguageManagerDialog = Taalmodulebeheer
-guiMatchCount = Aandachtspunten:
 guiMenuAbout = Over...
 guiMenuAddRules = &Regelbestand inlezen...
 guiMenuCheckClipboard = &Controleer tekst op klembord
@@ -111,42 +108,10 @@ guiMotherTongue = Moedertaal:
 guiNgramDir = ngram-gegevensdirectory
 guiNgramDirSelect = \u2013 stel directory in (herstart nodig) \u2013
 guiNgramHelp = Hulp
-guiNoErrorsFound = Geen aandachtspunten gevonden (taal: {0})
-guiNoErrorsFoundSelectedText = Geen aandachtspunten in de geselecteerde tekst(taal: {0})
 guiOKButton = &Ok\u00e9
-guiOOoChangeButton = Wijzigen
-guiOOoChangeAllButton = Correct All
-guiOOoAutoCorrectButton = Add to AutoCorrect
-guiOOoCloseButton = Sluiten
-guiOOoHelpButton = Help
-guiOOoIgnoreButton = Ignore Once
-guiOOoIgnoreAllButton = Alles negeren
-guiOOoIgnoreRuleButton = Ignore Rule
-guiOOoaddToDictionary = Add to Dictionary
-guiOOosuggestions = Suggestions:
-# is part of selection: Check: All | Only Spelling | Only Grammar
-guiOOoCheckTypeLabel = Check:
-# is part of selection: Check: All | Only Spelling | Only Grammar
-guiOOoCheckAllButton = All
-# is part of selection: Check: All | Only Spelling | Only Grammar
-guiOOoCheckSpellingButton = Only Spelling
-# is part of selection: Check: All | Only Spelling | Only Grammar
-guiOOoCheckGrammarButton = Only Grammar
-guiOOoCheckOnlyRuleButton = Only Rule
 guiTurnOffRule = Zet regel uit
-guiOOoOptionsButton = Opties...
-guiOOoCheckDialogName = Controlescherm
-guiOOoChangeLanguageRequest = Wissel taal
-# is part of selection: Change Language: Of Match | Of Paragraph
-guiOOoChangeLanguageMatch = Van bevinding
-# is part of selection: Change Language: Of Match | Of Paragraph
-guiOOoChangeLanguageParagraph = Voor alinea
-guiProgressWindowTitle = LanguageTool: Tekst controleren...
 guiRemoveButton = Verwijder
-guiReplaceWindowTitle = Tekst vervangen
-guiReplaceWithOtherText = <nieuwe tekst>
 guiRunOnPort = Voer uit als server op poo&rt
-guiSelectionCheckComplete = LanguageTool: controle van geselecteerde tekst gereed.
 guiTagText = &Details
 guiExamples = Voorbeelden:
 guiCurrentProfile = Huidig profiel:
@@ -157,33 +122,21 @@ guiDeleteProfile = Verwijder huidig profiel
 guiAddNewProfile = Voeg nieuw profiel toe:
 guiAddProfile = Add Profile
 guiImportProfile = Import Profile
-guiAddProfileName = Naam:
-guiAddProfileButton = Voeg toe
 guiUserProfile = Standaardprofiel
 guiDisabledDefaultRules = Disabled Default Rules
 guiEnabledOptionalRules = Enabled Optional Rules
 guiUseDocumentLanguage = Gebruik taal uit document
 guiSetLanguageTo = Stel taal in op
-guiCheckOnlyParagraph = Controleer alleen de paragraaf met de zin (snel)
-guiCheckFullText = Controleer de hele tekst (langzaamst)
-guiCheckChapter = Controleer het hoofdstuk
-guiCheckNumParagraphs = Te controleren paragrafen om deze zin heen (1 - 99):
 guiTextCheckMode = Text Check Mode
 guiParagraphCheckMode = Paragraph Check Mode 
 guiDeveloperModeCheck = Developer Mode - Select (-2, -1, 1, ..., 99):
-guiDoResetCheck = Controleer alle paragrafen opnieuw na elke wijziging van tekst
-guiNoMultiReset = Alleen als er maar een document is geopend
 # Use only one CPU core:
 guiOneThread = Use only one core
 guiIsMultiThread = Gebruik meer dan een processorkern (sneller, maar hogere cpu-belasting)
-guiUseTextLevelQueue = Controleer tekstniveauregels gelijktijdig
 guiNoBackgroundCheck = Disable background-processing check of text
-guiTextChangeLabel = Na tekstwijziging:
 guiSentenceExceedingRules = Sentence exceeding rules:
 guiTechnicalSettings = Technical settings:
-guiCheckFullTextAtFirst = Controleer volledige tekst nadat document is geladen
 guiUseLtSpellChecker = Use LanguageTool spell checker
-guiSpellCheckerWarning = Heap space too small: LanguageTool spell checker is not used.\nSet the heap space to at least 1024 MB to use the LanguageTool spell checker
 guiNoSynonymsAsSuggestions = Gebruik geen synoniemen voor suggesties (sneller, betreft enkele regels)
 guiIncludeTrackedChanges = Include tracked changes
 guiActivateTempOffRules = Enable temporarily disabled rules
@@ -195,16 +148,21 @@ guiUseServer = Gebruik server:
 guiUseServerExample = (http://Server_Name:Port) ZONDER /v2
 guiUseServerWarning1 = Gebruik s.v.p. URL zoals http://Servernaam:Poort of https://Servernaam:Poort
 guiUseServerWarning2 = Voeg geen "/v2" of "/" toe op het einde van de URL
-guiUseServerSettings = Gebruik serverinstellingen:
-guiStyleRepeatedWordText = Minimale afstand tussen twee herhaalde woorden (0 - 5 zinnen):
 guiUsePremiumAccount = Use premium account (for premium user)
-guiLongSentencesText = Maximale zinslengte (5 - 100 woorden)
 guiPremiumUsername = User name:
-guiLongParagraphsText = Maximale zinslengte (5 - 200 woorden)
 guiPremiumApiKey = API Key:
-guiUnderlineColor = Onderstrepingskleur van categorie
-guiUColorHint = Onderstrepingskleuren zijn beschikbaar in LibreOffice vanaf versie 6.2
-guiUColorHint1 = Onderstreeptypes die worden ondersteund door LibreOffice versie 6.3.0 en hoger
+guiAiSupportSettings = AI Support Settings
+guiUseAiSupport = Use AI Support
+guiAiUrl = AI Server URL
+guiAiModel = AI Model
+guiAiApiKey = AI API Key
+guiAiAutoCorrect = Enable automatic Error detection
+guiAiShowStylisticChanges = Show also suggestions for stylistic changes
+guiAiExperimentalHint = NOTE: This feature is still very experimental.
+guiAiQualityHint = The speed and quality of the results depends on the installation and model used.
+guiStyleRepeatedWordText = Minimale afstand tussen twee herhaalde woorden (0 - 5 zinnen):
+guiLongSentencesText = Maximale zinslengte (5 - 100 woorden)
+guiLongParagraphsText = Maximale zinslengte (5 - 200 woorden)
 guiMarkSingleCharBold = onderstreep een enkel foutief karakter met dikke golfje
 guiUColorStyleLabel = Underline style and color:
 guiUColorChange = Pas aan
@@ -262,7 +220,6 @@ pt-PT = Portugees (Portugal, na herziening)
 guiWarning = Waarschuwing
 guiDuplicate = Bestand met regels is al geladen
 ja = Japans
-language_not_supported = Fout: Excuses, de taal "{0}"wordt niet ondersteund door LanguageTool.
 http_server_start_failed = De HTTP-server van LanguageTool start niet voor host "{0}", poort {1}.\nMisschien loopt er al iets anders op die poort?
 https_server_start_failed = De HTTPS-server van LanguageTool start niet voor host "{0}", poort {1}.\nMisschien loopt er al iets anders op die poort?
 https_server_start_failed_unknown_reason = De HTTPS-server van LanguageTool kon niet gestart worden op computer "{0}", poort {1}. 
@@ -314,7 +271,6 @@ guiCollapseAll = Alles inklappen
 guiAboutRuleMenu = Over deze regel...
 guiAboutRuleTitle = Over deze regel
 long_sentence_rule_desc = Leesbaarheid: zin heeft meer dan {0} woorden.
-long_sentence_rule_msg = Zin is meer dan {0} woorden lang. Overweeg herformulering.
 long_sentence_rule_msg2 = Deze zin heeft meer dan {0} woorden. Overweeg herformulering.
 long_paragraph_rule_desc = Leesbaarheid: alinea heeft meer dan {0} woorden
 long_paragraph_rule_msg = Alinea is meer dan {0} woorden lang, overweeg inkorten.
@@ -329,7 +285,6 @@ whitespace_at_begin_parapgraph_desc = Spatie of vergelijkbaar teken aan het begi
 whitespace_at_begin_parapgraph_msg = Verwijder s.v.p. het spatiekarakter aan het begin van de paragraaf.
 repetition_paragraph_beginning_desc = Zelfde begin van paragraaf
 repetition_paragraph_beginning_last_msg = Zelfde begin als laatste paragraaf
-repetition_paragraph_beginning_next_msg = Zelfde begin als volgende paragraaf
 punctuation_mark_paragraph_end_desc = Geen leesteken aan het einde van de paragraaf
 punctuation_mark_paragraph_end_msg = Voeg s.v.p. een leesteken toe aan het einde van de paragraaf.
 guiLookAndFeelMenu = Uiterlijk en gedrag
@@ -343,8 +298,6 @@ statistics_suggest2_new = ''{2}'' is minder waarschijnlijk dan ''{0}'' ({1}).
 statistics_suggest3_new = ''{1}'' is minder waarschijnlijk ''{0}''.
 statistics_suggest4_new = ''{1}'' ({2}) is minder waarschijnlijk dan ''{0}''.
 statistics_suggest_short_desc = Possible word confusion
-neural_network_suggest_with_description = Statistiek suggereert dat ''{0}'' ({1}) hier misschien correct is, niet ''{2}'' ({3}). Controleer dit s.v.p.
-neural_network_suggest = Statistiek suggereert dat ''{0}'' hier misschien correct woord is, niet ''{1}''. Controleer dit s.v.p.
 unsupportedWarning = Let op: Deze taal wordt niet volledig ondersteund door LanguageTool, omdat niemand deze actief onderhoudt. <a href="https://languagetool.org/contribute/">Kijk hoe je kunt helpen.</a>
 token = Teken
 disambiguatorLog = Log van disambiguator
@@ -362,76 +315,7 @@ sr-BA = Servisch (Bosni\u00eb)
 sr-HR = Servisch (Kroati\u00eb)
 sr-ME = Servisch (Montenegro)
 too_many_errors = Maximaal aantal suggesties bereikt.
-loRemoteSwitchToLocal = Verbinding geweigerd: \nWissel naar interne LanguageTool-applicatie
 loRemoteInfoDefaultServer = Deze extensie controleert je tekst door deze over een beveiligde verbinding naar LanguageTool.org te sturen. Je teksten worden niet bewaard.
 loRemoteInfoOtherServer = Deze extensie controleert je tekst door deze over een beveiligde verbinding naar de remote server "{0}" te sturen. Je teksten worden niet bewaard.
 loMenuRemoteInfo = Controleer hint op afstand
-loMenuResetIgnorePermanent = Reset Ignore Permanent
-loMenuEnableBackgroundCheck = Enable background check
-loMenuDisableBackgroundCheck = Disable background check
-loMenuGrammarCheckAgain = Recheck Document
-loMenuNextError = Next spelling or grammar mistake
-loMenuChangeProfiles = Wijzig profiel naar
-loContextMenuRenewMarkups = Renew grammar markups
-loContextMenuOptions = LanguageTool-opties
-loContextMenuDeactivateRule = Regel uitschakelen
-loContextMenuIgnorePermanent = Ignore Permanent
-loContextMenuActivateRule = Activate Rule
-loContextMenuAddToDictionary = Add to Dictionary
-loContextMenuGrammarCheck = Grammar Check ...
-loContextMenuRefreshCheck = Refresh Check Results
-loContextMenuAbout = About
-loDialogLanguageHelp = The language of the paragraph shown in the editor element is displayed.\nIf you want to change the language of the underlined match or the whole paragraph, choose the new language first.\nAfter a new language is selected the "Change Language" button will be activated.
-loDialogChangeLanguageHelp = The list is activated, after a new language was selected.\nClick on the list to choose:\n - change the language of the match (underlined in the editor element)\n - the whole paragraph
-loDialogMatchDescriptionHelp = Gives a description of the possible error found by the spell or grammar checker.
-loDialogMatchParagraphHelp = Display the paragraph in which the match was found. The possible error is underlined and displayed in the defined color (spelling errors: red, grammatical errors: blue, stylistic errors: green, colors can be defined by the user in the LT option dialog).\nThe paragraph can be edited by the user.\nPress the "Change" button after editing to change the text of the document.
-loDialogSuggestionsHelp = The list of suggestions for the match is displayed.\n- Select a suggestion and press the "Change" button to replace the underlined match by the selected suggestion.\nHint: If you had changed the text in the editor element, the changed text will be replaced inside the document instead of the suggestion.
-loDialogCheckTypeHelp = Select to check:\n- only spelling\n- only grammar (and style)\n- all (spelling, grammar and style)
-loDialogHelpButtonHelp = Opens the help dialog
-loDialogOptionsButtonHelp = Opens the LT options dialog.\nThe Options can be changed by the user and saved by clicking the "OK" button of the dialog.
-loDialogUndoButtonHelp = Undoes the last action.\nUp to 20 actions can be undone.
-loDialogCloseButtonHelp = Closes the spell and grammar check dialog.
-loDialogMoreButtonHelp = For grammatical errors only:\n Opens a link in a browser to get advanced information about the error.
-loDialogIgnoreButtonHelp = Ignores the current match\n (The match is ignored till the next change of paragraph).
-loDialogIgnoreAllButtonHelp = Ignores all similar matches in the document:\n- For spelling errors: Ignore all words like the misspelled one\n- For grammatical errors: Ignore the rule\nThe words or rules are ignored till the end of the session.
-loDialogIgnorePermanentButtonHelp = Ignores the current match\n The match is ignored also after reopening the document\n until the reset ignore permanent button is clicked.
-loDialogResetIgnorePermanentButtonHelp = The permanent ignored matches will be reset.
-loDialogDeactivateRuleButtonHelp = For grammatical errors only:\n The rule is deactivated permanently\n (Can be activated again by LT option dialog).
-loDialogActivateRuleButtonHelp = Reactivate deactivated rules.
-loDialogAddToDictionaryButtonHelp = For spelling errors only:\n Choose a dictionary from the list.\n The unknown word is added to the chosen dictionary.
-loDialogChangeButtonHelp = Changes the text of the shown paragraph.\nThere are two modes of operation:\n1. If the paragraph shown in the editor element was changed by the user, the original text of the paragraph is replaced with the new text.\n2. If the paragraph shown in the editor element was not changed by the user, but at least one suggestion exist, the underlined match is replaced by the selected suggestion.\nIf there is no suggestion and no change in the editor field, the button is deactivated.
-loDialogChangeAllButtonHelp = For spelling errors only:\n Changes all misspelled words in the document to the selected suggestion.
-loDialogAutoCorrectButtonHelp = Changes all misspelled words in the document to the selected suggestion.\nAdd word-suggestion-pair to autoCorrect.
-loDialogHelpText = The spell and grammar check dialog uses the LibreOffice/OpenOffice spell check and the grammar and style check of LanguageTool.\nTo get help for single elements of the dialog, move the mouse cursor over the element in question.
-loDialogErrorCloseMessage = An internal error has occurred.\nThe LT spell and grammar check dialog will be closed.\nPlease try it again. 
-loDialogCacheLabel = Cache status
-loDialogDoNotCheck = Don't check 
-loCheckStatusInitialization = Initialization
-loCheckStatusCheck = Check
-loLabelCheckProgress = Checked text:
-loBusyMessage = LibreOffice is busy. \nPlease try later.
-loWaitMessage = Initializing dialog. \nPlease wait.
-loExtHeapMessage = LanguageTool memory limit reached. Switching to one paragraph mode. Some text-level rules will not work properly.
-loExtSwitchOffMessage = LanguageTool is switched off. Please switch it on to run this function.
-loDialogUnsupported = Grammar check doesn't support included Objects like graphics, pictures or text objects. \nPlease place the cursor into the text and start the dialog again.
-loNextErrorUnsupported = Grammar check doesn't support included Objects like graphics, pictures or text objects. \nPlease place the cursor into the text and search for next Error again.
-loNoGrammarCheckWarning = It seems the automatic grammar check is disabled. Please enable "Check grammar as you type" at "Tools"/"Options"/"Language Settings"/"Writing Aids" and restart LibreOffice/OpenOffice.
-loAboutLtDesc = Your writing assistant
-loCopyToClipBoardDesc = Copy to Clipboard
-loOpenLogFolderDesc = Open log folder
-loVersionInformation = Version Information
-loStatisticalAnalysis = Statistical Analysis
-loStatisticalAnalysisCloseButton = Close
-loStatisticalAnalysisDefaultButton = Default
-loStatisticalAnalysisSetButton = Set
-loStatisticalAnalysisWithoutDirectSpreech = Without direct speech
-loStatisticalAnalysisChapterLabel = Chapter
-loStatisticalAnalysisSubchapterLabel = Subchapter
-loStatisticalAnalysisMostUsedWords = Most used words
-loStatisticalAnalysisOptionsLabel = Options
-loStatisticalAnalysisLevels = Levels
-loStatisticalAnalysisIgnoreWordButton = Ignore word
-loStatisticalAnalysisResetIgnoredWordsButton = Reset ignored words
-loStatisticalAnalysisEntireDocument = Entire document
-loStatisticalAnalysisNotAnalyzed = Not analyzed
-loStatisticalAnalysisNumber = Number
+crh = Crimean Tatar
