--- a/languagetool-language-modules/pl/src/main/resources/org/languagetool/MessagesBundle_pl.properties
+++ b/languagetool-language-modules/pl/src/main/resources/org/languagetool/MessagesBundle_pl.properties
@@ -70,7 +70,6 @@ en-US = angielski (USA)
 en-CA = angielski (Kanada)
 en-NZ = angielski (Nowa Zelandia)
 en-ZA = angielski (RPA)
-enterText = Wpisz lub wklej tekst do sprawdzenia w g\u00f3rnym polu
 enterText2 = Wstaw tutaj tekst do sprawdzenia
 eo = esperanto
 errorContext = Kontekst:
@@ -89,12 +88,10 @@ guiGeneral = General
 guiProfiles = Profiles
 guiAddButton = Dodaj...
 guiCancelButton = Anuluj
-guiCheckComplete = Program LanguageTool zako\u0144czy\u0142 sprawdzanie.
 guiCloseButton = Zamknij
 guiConfigWindowTitle = Opcje LanguageTool
 guiDemoText = To jest przyk\u0142adowy tekst kt\u00f3ry pokazuje, jak jak dzia\u0142a LanguageTool. LanguageTool zawiera jusz korektor psowni.
 guiLanguageManagerDialog = Mened\u017cer modu\u0142\u00f3w j\u0119zykowych
-guiMatchCount = Potencjalne b\u0142\u0119dy:
 guiMenuAbout = &Informacje...
 guiMenuAddRules = Otw\u00f3rz plik &regu\u0142
 guiMenuCheckClipboard = Sprawd\u017a &tekst ze schowka
@@ -111,42 +108,10 @@ guiMotherTongue = J\u0119zyk ojczysty:
 guiNgramDir = katalog danych ngram\u00f3w:
 guiNgramDirSelect = \u2013 ustaw katalog (wymaga ponownego uruchomienia) \u2013
 guiNgramHelp = Pomoc
-guiNoErrorsFound = Nie znaleziono b\u0142\u0119d\u00f3w ani usterek (j\u0119zyk: {0})
-guiNoErrorsFoundSelectedText = W zaznaczonym tek\u015bcie nie znaleziono b\u0142\u0119d\u00f3w ani usterek (j\u0119zyk: {0})
 guiOKButton = &OK
-guiOOoChangeButton = &Zmie\u0144
-guiOOoChangeAllButton = Zmie\u0144 wszystko
-guiOOoAutoCorrectButton = Add to AutoCorrect
-guiOOoCloseButton = Zamknij
-guiOOoHelpButton = Help
-guiOOoIgnoreButton = Pomi\u0144
-guiOOoIgnoreAllButton = Ignoruj wszystkie
-guiOOoIgnoreRuleButton = Ignore Rule
-guiOOoaddToDictionary = Dodaj do s\u0142ownika
-guiOOosuggestions = Podpowiedzi:
-# is part of selection: Check: All | Only Spelling | Only Grammar
-guiOOoCheckTypeLabel = Sprawd\u017a:
-# is part of selection: Check: All | Only Spelling | Only Grammar
-guiOOoCheckAllButton = Wszystko
-# is part of selection: Check: All | Only Spelling | Only Grammar
-guiOOoCheckSpellingButton = Tylko pisowni\u0119
-# is part of selection: Check: All | Only Spelling | Only Grammar
-guiOOoCheckGrammarButton = Tylko gramatyk\u0119
-guiOOoCheckOnlyRuleButton = Only Rule
 guiTurnOffRule = Wy\u0142\u0105cz regu\u0142\u0119
-guiOOoOptionsButton = &Opcje...
-guiOOoCheckDialogName = Okno dialogowe korekty pisowni i gramatyki
-guiOOoChangeLanguageRequest = Zmie\u0144 j\u0119zyk
-# is part of selection: Change Language: Of Match | Of Paragraph
-guiOOoChangeLanguageMatch = trafienia
-# is part of selection: Change Language: Of Match | Of Paragraph
-guiOOoChangeLanguageParagraph = akapitu
-guiProgressWindowTitle = LanguageTool: Sprawdzanie tekstu...
 guiRemoveButton = Usu\u0144
-guiReplaceWindowTitle = Zast\u0105p tekst
-guiReplaceWithOtherText = <inny tekst>
 guiRunOnPort = Uruchom jako serwer na po&rcie
-guiSelectionCheckComplete = Sprawdzanie zaznaczonego tekstu w programie LanguageTool zosta\u0142o zako\u0144czone.
 guiTagText = Poka\u017c znaczniki w tek\u015bcie
 guiExamples = Przyk\u0142ady:
 guiCurrentProfile = Current Profile:
@@ -157,33 +122,21 @@ guiDeleteProfile = Delete Current Profile
 guiAddNewProfile = Add a new Profile:
 guiAddProfile = Dodaj profil
 guiImportProfile = Importuj profil
-guiAddProfileName = Nazwa:
-guiAddProfileButton = Add
 guiUserProfile = Default Profile
 guiDisabledDefaultRules = Wy\u0142\u0105czone regu\u0142y domy\u015blne
 guiEnabledOptionalRules = W\u0142\u0105czone regu\u0142y opcjonalne
 guiUseDocumentLanguage = Use document language
 guiSetLanguageTo = Set language to
-guiCheckOnlyParagraph = Check only the sentence containing paragraph (fastest)
-guiCheckFullText = Check full text (slowest)
-guiCheckChapter = Check the chapter
-guiCheckNumParagraphs = Check Number of paragraphs surround sentence (1 - 99):
 guiTextCheckMode = Tryb sprawdzania tekstu
 guiParagraphCheckMode = Tryb sprawdzania akapitu 
 guiDeveloperModeCheck = Tryb programisty - wybierz (-2, -1, 1, ..., 99):
-guiDoResetCheck = Check all paragraphs again after every change of text
-guiNoMultiReset = Only if a single document is loaded
 # Use only one CPU core:
 guiOneThread = U\u017cyj tylko jednego rdzenia procesora
 guiIsMultiThread = Use more than one core (faster but high CPU load)
-guiUseTextLevelQueue = Check text level rules parallel
 guiNoBackgroundCheck = Bez sprawdzania tekstu w tle
-guiTextChangeLabel = After text change:
 guiSentenceExceedingRules = Regu\u0142y przekraczaj\u0105ce zdania:
 guiTechnicalSettings = Ustawienia techniczne
-guiCheckFullTextAtFirst = Check full text after a document is loaded
 guiUseLtSpellChecker = Use LanguageTool spell checker
-guiSpellCheckerWarning = Heap space too small: LanguageTool spell checker is not used.\nSet the heap space to at least 1024 MB to use the LanguageTool spell checker
 guiNoSynonymsAsSuggestions = Do not use synonyms as suggestions (faster, regards only few rules)
 guiIncludeTrackedChanges = Include tracked changes
 guiActivateTempOffRules = Enable temporarily disabled rules
@@ -195,16 +148,21 @@ guiUseServer = Use server:
 guiUseServerExample = (http://Server_Name:Port) WITHOUT /v2
 guiUseServerWarning1 = Please use URL like http://Server_Name:Port or https://Server_Name:Port
 guiUseServerWarning2 = Don't add "/v2" or "/" at the end of URL
-guiUseServerSettings = Use server settings
-guiStyleRepeatedWordText = Maximum distance between two repeated words (0 - 5 sentences):
 guiUsePremiumAccount = Use premium account (for premium user)
-guiLongSentencesText = Maximum sentences length (5 - 100 words):
 guiPremiumUsername = User name:
-guiLongParagraphsText = Maximum paragraphs length (5 - 200 words):
 guiPremiumApiKey = API Key:
-guiUnderlineColor = Underline Color of Category
-guiUColorHint = Underline colors are supported by LibreOffice version 6.2.0 and higher
-guiUColorHint1 = Underline types are supported by LibreOffice version 6.3.0 and higher
+guiAiSupportSettings = AI Support Settings
+guiUseAiSupport = Use AI Support
+guiAiUrl = AI Server URL
+guiAiModel = AI Model
+guiAiApiKey = AI API Key
+guiAiAutoCorrect = Enable automatic Error detection
+guiAiShowStylisticChanges = Show also suggestions for stylistic changes
+guiAiExperimentalHint = NOTE: This feature is still very experimental.
+guiAiQualityHint = The speed and quality of the results depends on the installation and model used.
+guiStyleRepeatedWordText = Maximum distance between two repeated words (0 - 5 sentences):
+guiLongSentencesText = Maximum sentences length (5 - 100 words):
+guiLongParagraphsText = Maximum paragraphs length (5 - 200 words):
 guiMarkSingleCharBold = underline a single character error by a bold wave
 guiUColorStyleLabel = Kolor i styl podkre\u015blenia
 guiUColorChange = Zmie\u0144
@@ -262,7 +220,6 @@ pt-PT = Portuguese (Portugal posAO)
 guiWarning = Ostrze\u017cenie
 guiDuplicate = Wybrany plik regu\u0142 jest ju\u017c za\u0142adowany. Wybierz inny plik regu\u0142.
 ja = japo\u0144ski
-language_not_supported = B\u0142\u0105d: Niestety, j\u0119zyk dokumentu "{0}" nie jest obs\u0142ugiwany w programie LanguageTool.
 http_server_start_failed = LanguageTool HTTP server could not be started on host "{0}", port {1}.\nMaybe something else is running on that port already?
 https_server_start_failed = LanguageTool HTTPS server could not be started on host "{0}", port {1}.\nMaybe something else is running on that port already?
 https_server_start_failed_unknown_reason = Nie mo\u017cna uruchomi\u0107 serwera HTTP programu LanguageTool na serwerze "{0}" i porcie {1}.
@@ -314,8 +271,7 @@ guiCollapseAll = Zwi\u0144 wszystko
 guiAboutRuleMenu = &Informacje o regule\u2026
 guiAboutRuleTitle = Informacje o regule
 long_sentence_rule_desc = Klarowno\u015b\u0107 \u2013 liczba s\u0142\u00f3w zdaniu przekracza: {0}
-long_sentence_rule_msg = Liczba s\u0142\u00f3w w zdaniu przekracza {0}; warto je przeredagowa\u0107
-long_sentence_rule_msg2 = This sentence is over {0} words long. Consider splitting it up to make the text easier to read.
+long_sentence_rule_msg2 = This sentence is over {0} words long. Consider splitting it up, as shorter sentences make the text easier to read.
 long_paragraph_rule_desc = Readability: paragraph over {0} words
 long_paragraph_rule_msg = This paragraph is over {0} words long here, consider revising it.
 filler_words_rule_desc = Filler words
@@ -329,7 +285,6 @@ whitespace_at_begin_parapgraph_desc = Space character at the beginning of paragr
 whitespace_at_begin_parapgraph_msg = Please delete the space character at the beginning of the paragraph.
 repetition_paragraph_beginning_desc = Same beginning of paragraph
 repetition_paragraph_beginning_last_msg = Same beginning as last paragraph
-repetition_paragraph_beginning_next_msg = Same beginning as next paragraph
 punctuation_mark_paragraph_end_desc = No punctuation mark at the end of paragraph
 punctuation_mark_paragraph_end_msg = Please add a punctuation mark at the end of paragraph.
 guiLookAndFeelMenu = Wygl\u0105d programu
@@ -343,8 +298,6 @@ statistics_suggest2_new = ''{2}'' wydaje si\u0119 mniej prawdopodobne ni\u017c '
 statistics_suggest3_new = ''{1}'' wydaje si\u0119 mniej prawdopodobne ni\u017c ''{0}''.
 statistics_suggest4_new = ''{1}'' ({2}) wydaje si\u0119 mniej prawdopodobne ni\u017c ''{0}''.
 statistics_suggest_short_desc = Potencjalnie pomylone wyrazy
-neural_network_suggest_with_description = Our neural network thinks that ''{0}'' ({1}) might be the correct word here, not ''{2}'' ({3}). Please check.
-neural_network_suggest = Our neural network thinks that ''{0}'' might be the correct word here, not ''{1}''. Please check.
 unsupportedWarning = Uwaga: Ten j\u0119zyk nie jest w pe\u0142ni obs\u0142ugiwany w LanguageTool, gdy\u017c nie ma osoby, kt\u00f3ra si\u0119 nim zajmuje. <a href="https://languagetool.org/contribute/"> Zobacz, jak mo\u017cesz pom\u00f3c.</a>
 token = Element
 disambiguatorLog = Rejestr operacji ujednoznaczniania
@@ -362,76 +315,7 @@ sr-BA = Serbian (Bosnia)
 sr-HR = Serbian (Croatia)
 sr-ME = Serbian (Montenegro)
 too_many_errors = (suggestion limit reached)
-loRemoteSwitchToLocal = Connection refused: \nSwitch to internal LanguageTool application
 loRemoteInfoDefaultServer = The extension will check your text by sending it to LanguageTool.org over an encrypted connection. Your text will not be stored.
 loRemoteInfoOtherServer = The extension will check your text by sending it to the remote server "{0}". Contact the server administrator for information about privacy protection.
 loMenuRemoteInfo = Remote Check Hint
-loMenuResetIgnorePermanent = Reset Ignore Permanent
-loMenuEnableBackgroundCheck = Enable background check
-loMenuDisableBackgroundCheck = Disable background check
-loMenuGrammarCheckAgain = Recheck Document
-loMenuNextError = Next spelling or grammar mistake
-loMenuChangeProfiles = Change Profile to
-loContextMenuRenewMarkups = Renew grammar markups
-loContextMenuOptions = Opcje LanguageTool
-loContextMenuDeactivateRule = Deactivate Rule
-loContextMenuIgnorePermanent = Ignore Permanent
-loContextMenuActivateRule = W\u0142\u0105cz regu\u0142\u0119
-loContextMenuAddToDictionary = Add to Dictionary
-loContextMenuGrammarCheck = Grammar Check ...
-loContextMenuRefreshCheck = Refresh Check Results
-loContextMenuAbout = About
-loDialogLanguageHelp = Wy\u015bwietla j\u0119zyk akapitu widocznego w edytorze. \nAby zmieni\u0107 j\u0119zyk podkre\u015blonego trafienia lub ca\u0142ego akapitu, wybierz najpierw nowy j\u0119zyk. \nPo wybraniu nowego j\u0119zyka b\u0119dzie mo\u017cna u\u017cy\u0107 przycisku \u201eZmie\u0144 j\u0119zyk\u201d.
-loDialogChangeLanguageHelp = Lista uruchamia si\u0119 po wybraniu nowego j\u0119zyka. \nKliknij list\u0119, aby wybra\u0107: \n\u2013 zmian\u0119 j\u0119zyka trafienia (podkre\u015blonego w edytorze) \n\u2013 ca\u0142y akapit
-loDialogMatchDescriptionHelp = Podaje opis potencjalnego b\u0142\u0119du odnalezionego przez korektor pisowni lub gramatyki.
-loDialogMatchParagraphHelp = Powoduje wy\u015bwietlenie akapitu zawieraj\u0105cego trafienie. Potencjalny b\u0142\u0105d jest podkre\u015blony i wy\u015bwietlony w zdefiniowanym kolorze (b\u0142\u0119dy pisowni: czerwony, gramatyczne: niebieski, stylistyczne: zielony; kolory mo\u017cna dostosowa\u0107 w oknie dialogowym Opcje rozszerzenia LT). \nAkapit mo\u017ce by\u0107 redagowany przez u\u017cytkownika. \nNaci\u015bnij przycisk \u201eZmie\u0144\u201d po zredagowaniu tekstu, aby zmieni\u0107 tekst dokumentu.
-loDialogSuggestionsHelp = Wy\u015bwietla si\u0119 lista podpowiedzi dotycz\u0105cych trafienia. \n\u2013 Wybierz podpowied\u017a i naci\u015bnij przycisk \u201eZmie\u0144\u201d, aby zast\u0105pi\u0107 podkre\u015blone trafienie wybran\u0105 podpowiedzi\u0105. \nWskaz\u00f3wka: Je\u015bli zmieniono tekst w oknie edycji, zostanie on te\u017c zast\u0105piony w ca\u0142o\u015bci w dokumencie, zamiast wprowadzania samej podpowiedzi.
-loDialogCheckTypeHelp = Zaznacz, aby wykona\u0107 sprawdzanie: \n- tylko pisowni, \n- tylko gramatyki (i stylu), \n- wszystkiego (pisowni, gramatyki i stylu).
-loDialogHelpButtonHelp = Powoduje otwarcie okna pomocy
-loDialogOptionsButtonHelp = Powoduje otwarcie okna opcji LT. \nOpcje mog\u0105 by\u0107 zmienione przez u\u017cytkownika i zapisane po klikni\u0119ciu przycisku \u201eOK\u201d w oknie dialogowym.
-loDialogUndoButtonHelp = Powoduje cofni\u0119cie ostatniego dzia\u0142ania. \nMo\u017cna cofn\u0105\u0107 do 20 dzia\u0142a\u0144.
-loDialogCloseButtonHelp = Zamyka okno dialogowe korekty pisowni i gramatyki
-loDialogMoreButtonHelp = Dotyczy tylko b\u0142\u0119d\u00f3w gramatycznych: \n Powoduje otwarcie w przegl\u0105darce strony zawieraj\u0105cej dodatkowe informacje o b\u0142\u0119dzie.
-loDialogIgnoreButtonHelp = Powoduje pomini\u0119cie aktualnego trafienia \n (Trafienie jest pomijane do ko\u0144ca akapitu)
-loDialogIgnoreAllButtonHelp = Powoduje pomini\u0119cie wszystkich podobnych trafie\u0144 w dokumencie: \n\u2013 w przypadku b\u0142\u0119d\u00f3w pisowni: pomini\u0119cie wszystkich wyraz\u00f3w podobnych do niepoprawnie zapisanego \n\u2013 w przypadku b\u0142\u0119d\u00f3w gramatycznych: pomini\u0119cie regu\u0142y \nWyrazy lub regu\u0142y s\u0105 pomijane do ko\u0144ca sesji.
-loDialogIgnorePermanentButtonHelp = Ignores the current match\n The match is ignored also after reopening the document\n until the reset ignore permanent button is clicked.
-loDialogResetIgnorePermanentButtonHelp = The permanent ignored matches will be reset.
-loDialogDeactivateRuleButtonHelp = Dotyczy tylko b\u0142\u0119d\u00f3w gramatycznych: \n Regu\u0142a zostanie trwale wy\u0142\u0105czona\n (Mo\u017cna w\u0142\u0105czy\u0107 znowu w oknie dialogowym Opcje).
-loDialogActivateRuleButtonHelp = Powoduje w\u0142\u0105czenie wy\u0142\u0105czonych regu\u0142.
-loDialogAddToDictionaryButtonHelp = Dotyczy tylko b\u0142\u0119d\u00f3w pisowni: \n Wybierz s\u0142ownik z listy.\n Nieznany wyraz zostanie dodany do wybranego s\u0142ownika.
-loDialogChangeButtonHelp = Zmienia tekst widocznego akapitu. \nS\u0105 dwa tryby dzia\u0142ania: \n1. Je\u015bli akapit widoczny w edytorze w oknie zosta\u0142 zmieniony przez u\u017cytkownika, oryginalny tekst akapitu zostanie zast\u0105piony nowym tekstem.\n2. Je\u015bli akapit widoczny w edytorze w oknie nie zosta\u0142 zmieniony przez u\u017cytkownika, ale istnieje co najmniej jedna podpowied\u017a, podkre\u015blone trafienie zostanie zast\u0105pione wybran\u0105 podpowiedzi\u0105. \nJe\u015bli nie ma podpowiedzi ani zmiany w polu edytora, przycisk jest nieaktywny.
-loDialogChangeAllButtonHelp = Tylko w przypadku b\u0142\u0119d\u00f3w pisowni: \n powoduje zast\u0105pienie wszystkich b\u0142\u0119dnie zapisanych wyraz\u00f3w w dokumencie przez wybran\u0105 podpowied\u017a.
-loDialogAutoCorrectButtonHelp = Changes all misspelled words in the document to the selected suggestion.\nAdd word-suggestion-pair to autoCorrect.
-loDialogHelpText = Okno dialogowe korekty pisowni i gramatyki wykorzystuje korekt\u0119 pisowni programu LibreOffice/OpenOffice oraz korekt\u0119 gramatyki i stylu z programu LanguageTool. \nAby uzyska\u0107 pomoc na temat poszczeg\u00f3lnych element\u00f3w okna, przesu\u0144 kursor myszy na dany element.
-loDialogErrorCloseMessage = An internal error has occurred.\nThe LT spell and grammar check dialog will be closed.\nPlease try it again. 
-loDialogCacheLabel = Cache status
-loDialogDoNotCheck = Don't check 
-loCheckStatusInitialization = Uruchamianie
-loCheckStatusCheck = Sprawdzanie
-loLabelCheckProgress = Checked text:
-loBusyMessage = LibreOffice is busy. \nPlease try later.
-loWaitMessage = Initializing dialog. \nPlease wait.
-loExtHeapMessage = Osi\u0105gni\u0119to limit pami\u0119ci programu LanguageTool. Program prze\u0142\u0105cza si\u0119 w tryb pojedynczego akapitu. Niekt\u00f3re regu\u0142y poziomu tekstu nie b\u0119d\u0105 poprawnie dzia\u0142a\u0107.
-loExtSwitchOffMessage = Program LanguageTool jest wy\u0142\u0105czony. W\u0142\u0105cz go, aby uruchomi\u0107 t\u0119 funkcj\u0119.
-loDialogUnsupported = Sprawdzanie gramatyki nie obs\u0142uguje za\u0142\u0105czonych obiekt\u00f3w takich jak grafika, obrazki czy obiekty tekstowe. \nUstaw kursor w tek\u015bcie i ponownie uruchom okno dialogowe.
-loNextErrorUnsupported = Sprawdzanie gramatyki nie obs\u0142uguje za\u0142\u0105czonych obiekt\u00f3w takich jak grafika, obrazki lub obiekty tekstowe. \nUstaw kursor w tek\u015bcie i ponownie poszukaj kolejnego b\u0142\u0119du.
-loNoGrammarCheckWarning = It seems the automatic grammar check is disabled. Please enable "Check grammar as you type" at "Tools"/"Options"/"Language Settings"/"Writing Aids" and restart LibreOffice/OpenOffice.
-loAboutLtDesc = Your writing assistant
-loCopyToClipBoardDesc = Copy to Clipboard
-loOpenLogFolderDesc = Open log folder
-loVersionInformation = Version Information
-loStatisticalAnalysis = Statistical Analysis
-loStatisticalAnalysisCloseButton = Close
-loStatisticalAnalysisDefaultButton = Default
-loStatisticalAnalysisSetButton = Set
-loStatisticalAnalysisWithoutDirectSpreech = Without direct speech
-loStatisticalAnalysisChapterLabel = Chapter
-loStatisticalAnalysisSubchapterLabel = Subchapter
-loStatisticalAnalysisMostUsedWords = Most used words
-loStatisticalAnalysisOptionsLabel = Options
-loStatisticalAnalysisLevels = Levels
-loStatisticalAnalysisIgnoreWordButton = Ignore word
-loStatisticalAnalysisResetIgnoredWordsButton = Reset ignored words
-loStatisticalAnalysisEntireDocument = Entire document
-loStatisticalAnalysisNotAnalyzed = Not analyzed
-loStatisticalAnalysisNumber = Number
+crh = Crimean Tatar
