--- a/languagetool-language-modules/pt/src/main/resources/org/languagetool/MessagesBundle_pt_PT.properties
+++ b/languagetool-language-modules/pt/src/main/resources/org/languagetool/MessagesBundle_pt_PT.properties
@@ -70,7 +70,6 @@ en-US = Ingl\u00eas (Americano)
 en-CA = Ingl\u00eas (Canadiano)
 en-NZ = Ingl\u00eas (Neozeland\u00eas)
 en-ZA = Ingl\u00eas (Sul-africano)
-enterText = Introduza ou cole o texto a verificar na \u00e1rea superior
 enterText2 = Insera aqui o texto a corrigir
 eo = Esperanto
 errorContext = Contexto:
@@ -89,12 +88,10 @@ guiGeneral = Geral
 guiProfiles = Profiles
 guiAddButton = Adicionar...
 guiCancelButton = Cancelar
-guiCheckComplete = Verifica\u00e7\u00e3o do gramatical conclu\u00edda
 guiCloseButton = Fechar
 guiConfigWindowTitle = Op\u00e7\u00f5es do LanguageTool
 guiDemoText = isto \u00e9 uma exemplo , para mostrar para mostrar os funcionamento do LanguageTool..
 guiLanguageManagerDialog = Gestor de M\u00f3dulo de Idioma
-guiMatchCount = Erros potenciais:
 guiMenuAbout = &Acerca de...
 guiMenuAddRules = Carregar Ficheiro de &Regras
 guiMenuCheckClipboard = &Verificar \u00c1rea de Transfer\u00eancia
@@ -111,42 +108,10 @@ guiMotherTongue = Idioma nativo:
 guiNgramDir = Diret\u00f3rio de dados ngram:
 guiNgramDirSelect = Definir diret\u00f3rio (requer reinicializa\u00e7\u00e3o)
 guiNgramHelp = Ajuda
-guiNoErrorsFound = N\u00e3o foram encontrados erros (idioma: {0})
-guiNoErrorsFoundSelectedText = N\u00e3o foram encontrados erros no texto selecionado (idioma: {0})
 guiOKButton = &OK
-guiOOoChangeButton = &Alterar
-guiOOoChangeAllButton = Correct All
-guiOOoAutoCorrectButton = Add to AutoCorrect
-guiOOoCloseButton = Fechar
-guiOOoHelpButton = Help
-guiOOoIgnoreButton = Ignore Once
-guiOOoIgnoreAllButton = Ignorar todos
-guiOOoIgnoreRuleButton = Ignore Rule
-guiOOoaddToDictionary = Add to Dictionary
-guiOOosuggestions = Suggestions:
-# is part of selection: Check: All | Only Spelling | Only Grammar
-guiOOoCheckTypeLabel = Check:
-# is part of selection: Check: All | Only Spelling | Only Grammar
-guiOOoCheckAllButton = All
-# is part of selection: Check: All | Only Spelling | Only Grammar
-guiOOoCheckSpellingButton = Only Spelling
-# is part of selection: Check: All | Only Spelling | Only Grammar
-guiOOoCheckGrammarButton = Only Grammar
-guiOOoCheckOnlyRuleButton = Only Rule
 guiTurnOffRule = Desativar Regra
-guiOOoOptionsButton = Op\u00e7\u00f5es...
-guiOOoCheckDialogName = Spell and Grammar Check Dialog
-guiOOoChangeLanguageRequest = Change Language
-# is part of selection: Change Language: Of Match | Of Paragraph
-guiOOoChangeLanguageMatch = Of Match
-# is part of selection: Change Language: Of Match | Of Paragraph
-guiOOoChangeLanguageParagraph = Of Paragraph
-guiProgressWindowTitle = LanguageTool: A verificar o texto...
 guiRemoveButton = Eliminar
-guiReplaceWindowTitle = Substituir o texto
-guiReplaceWithOtherText = <outro texto>
 guiRunOnPort = Executar como servidor na por&ta
-guiSelectionCheckComplete = LanguageTool concluiu a corre\u00e7\u00e3o do texto selecionado.
 guiTagText = Marcar Texto
 guiExamples = Exemplos:
 guiCurrentProfile = Current Profile:
@@ -157,33 +122,21 @@ guiDeleteProfile = Delete current Profile
 guiAddNewProfile = Add a new Profile:
 guiAddProfile = Add Profile
 guiImportProfile = Import Profile
-guiAddProfileName = Nome:
-guiAddProfileButton = Add
 guiUserProfile = Default Profile
 guiDisabledDefaultRules = Disabled Default Rules
 guiEnabledOptionalRules = Enabled Optional Rules
 guiUseDocumentLanguage = Use document language
 guiSetLanguageTo = Set language to
-guiCheckOnlyParagraph = Verificar apenas o par\u00e1grafo que cont\u00e9m a frase (r\u00e1pido)
-guiCheckFullText = Verificar o texto completo (lento)
-guiCheckChapter = Check the chapter
-guiCheckNumParagraphs = Verificar o n\u00famero de par\u00e1grafos que envolvem cada frase (1-99):
 guiTextCheckMode = Text Check Mode
 guiParagraphCheckMode = Paragraph Check Mode 
 guiDeveloperModeCheck = Developer Mode - Select (-2, -1, 1, ..., 99):
-guiDoResetCheck = Verificar todos os par\u00e1grafos sempre que alterar o texto
-guiNoMultiReset = Only if a single document is loaded
 # Use only one CPU core:
 guiOneThread = Use only one core
 guiIsMultiThread = Use more than one core (faster but high CPU load)
-guiUseTextLevelQueue = Check text level rules parallel
 guiNoBackgroundCheck = Disable background-processing check of text
-guiTextChangeLabel = After text change:
 guiSentenceExceedingRules = Sentence exceeding rules:
 guiTechnicalSettings = Technical settings:
-guiCheckFullTextAtFirst = Check full text after a document is loaded
 guiUseLtSpellChecker = Use LanguageTool spell checker
-guiSpellCheckerWarning = Heap space too small: LanguageTool spell checker is not used.\nSet the heap space to at least 1024 MB to use the LanguageTool spell checker
 guiNoSynonymsAsSuggestions = Do not use synonyms as suggestions (faster, regards only few rules)
 guiIncludeTrackedChanges = Include tracked changes
 guiActivateTempOffRules = Enable temporarily disabled rules
@@ -195,16 +148,21 @@ guiUseServer = Use server:
 guiUseServerExample = (http://Server_Name:Port) WITHOUT /v2
 guiUseServerWarning1 = Please use URL like http://Server_Name:Port or https://Server_Name:Port
 guiUseServerWarning2 = Don't add "/v2" or "/" at the end of URL
-guiUseServerSettings = Use server settings
-guiStyleRepeatedWordText = Dist\u00e2ncia m\u00e1xima entre palavras repetidas (0-5 frases)
 guiUsePremiumAccount = Use premium account (for premium user)
-guiLongSentencesText = Comprimento m\u00e1ximo das frases (5-100 palavras):
 guiPremiumUsername = User name:
-guiLongParagraphsText = Comprimento m\u00e1ximo dos par\u00e1grafos (5-200 palavras):
 guiPremiumApiKey = API Key:
-guiUnderlineColor = Cor do Sublinhado
-guiUColorHint = A escolha de cores dos sublinhados \u00e9 suportada a partir do LibreOffice 6.2.0 ou superior.
-guiUColorHint1 = Underline types are supported by LibreOffice version 6.3.0 and higher
+guiAiSupportSettings = AI Support Settings
+guiUseAiSupport = Use AI Support
+guiAiUrl = AI Server URL
+guiAiModel = AI Model
+guiAiApiKey = AI API Key
+guiAiAutoCorrect = Enable automatic Error detection
+guiAiShowStylisticChanges = Show also suggestions for stylistic changes
+guiAiExperimentalHint = NOTE: This feature is still very experimental.
+guiAiQualityHint = The speed and quality of the results depends on the installation and model used.
+guiStyleRepeatedWordText = Dist\u00e2ncia m\u00e1xima entre palavras repetidas (0-5 frases)
+guiLongSentencesText = Comprimento m\u00e1ximo das frases (5-100 palavras):
+guiLongParagraphsText = Comprimento m\u00e1ximo dos par\u00e1grafos (5-200 palavras):
 guiMarkSingleCharBold = underline a single character error by a bold wave
 guiUColorStyleLabel = Underline style and color:
 guiUColorChange = Alterar
@@ -262,7 +220,6 @@ pt-PT = Portugu\u00eas (Portugal p\u00f3s-AO)
 guiWarning = Aten\u00e7\u00e3o
 guiDuplicate = Ficheiro de regras duplicado!
 ja = Japon\u00eas
-language_not_supported = Erro: Desculpe, o LanguageTool n\u00e3o suporta idioma do documento, "{0}".
 http_server_start_failed = O servidor HTTP do LanguageTool n\u00e3o pode ser iniciado no host "{0}", porta {1}.\nTalvez outra aplica\u00e7\u00e3o esteja a ocupar essa porta?
 https_server_start_failed = O servidor HTTPS do LanguageTool n\u00e3o pode ser iniciado no host "{0}", porta {1}.\nTalvez outra aplica\u00e7\u00e3o esteja a ocupar essa porta?
 https_server_start_failed_unknown_reason = O servidor HTTPS do LanguageTool n\u00e3o pode ser iniciado no host "{0}", porta {1}
@@ -314,7 +271,6 @@ guiCollapseAll = Colapsar Tudo
 guiAboutRuleMenu = Sobre a Regra...
 guiAboutRuleTitle = Sobre a Regra
 long_sentence_rule_desc = Legibilidade: frase com mais de {0} palavras
-long_sentence_rule_msg = A frase tem mais de {0} palavras. Reveja, por favor.
 long_sentence_rule_msg2 = Na posi\u00e7\u00e3o marcada, esta frase excede as {0} palavras. Considere rever.
 long_paragraph_rule_desc = Legibilidade: par\u00e1grafo excede as {0} palavras
 long_paragraph_rule_msg = O par\u00e1grafo tem mais de {0} palavras aqui. Considere rever.
@@ -329,7 +285,6 @@ whitespace_at_begin_parapgraph_desc = Caractere de espa\u00e7o no in\u00edcio do
 whitespace_at_begin_parapgraph_msg = Apague o espa\u00e7o de caractere no in\u00edcio do par\u00e1grafo.
 repetition_paragraph_beginning_desc = In\u00edcio de par\u00e1grafo repetido
 repetition_paragraph_beginning_last_msg = O mesmo come\u00e7o que o par\u00e1grafo anterior
-repetition_paragraph_beginning_next_msg = O mesmo come\u00e7o que o par\u00e1grafo seguinte
 punctuation_mark_paragraph_end_desc = Falta de pontua\u00e7\u00e3o final no final do par\u00e1grafo
 punctuation_mark_paragraph_end_msg = Adicione pontua\u00e7\u00e3o final ao fim do par\u00e1grafo.
 guiLookAndFeelMenu = Apar\u00eancia
@@ -343,8 +298,6 @@ statistics_suggest2_new = Please check whether ''{0}'' ({1}) might be the correc
 statistics_suggest3_new = Please check whether ''{0}'' might be the correct word here instead of ''{1}''.
 statistics_suggest4_new = Please check whether ''{0}'' might be the correct word here instead of ''{1}'' ({2}).
 statistics_suggest_short_desc = Possible word confusion
-neural_network_suggest_with_description = A nossa rede neuronal acha que ''{0}'' (''{1}'') pode ser a palavra correta nesta situa\u00e7\u00e3o, e n\u00e3o ''{2}'' (''{3}''). Por favor, verifique.
-neural_network_suggest = A nossa rede neuronal acha que ''{0}''\u00a0pode ser a palavra correta nesta situa\u00e7\u00e3o, e n\u00e3o ''{1}''. Por favor, verifique.
 unsupportedWarning = Nota: Este idioma n\u00e3o \u00e9 totalmente suportado no LanguageTool porque n\u00e3o h\u00e1 ningu\u00e9m a mant\u00ea-lo. <a href="https://languagetool.org/contribute/"> Veja como pode ajudar.</a>
 token = Token
 disambiguatorLog = Registo do desambiguador
@@ -362,76 +315,7 @@ sr-BA = S\u00e9rvio (B\u00f3snia)
 sr-HR = S\u00e9rvio (Cro\u00e1cia)
 sr-ME = S\u00e9rvio (Montenegro)
 too_many_errors = (limite de sugest\u00f5es excedido)
-loRemoteSwitchToLocal = Connection refused: \nSwitch to internal LanguageTool application
 loRemoteInfoDefaultServer = The extension will check your text by sending it to LanguageTool.org over an encrypted connection. Your text will not be stored.
 loRemoteInfoOtherServer = The extension will check your text by sending it to the remote server "{0}". Contact the server administrator for information about privacy protection.
 loMenuRemoteInfo = Remote Check Hint
-loMenuResetIgnorePermanent = Reset Ignore Permanent
-loMenuEnableBackgroundCheck = Enable background check
-loMenuDisableBackgroundCheck = Disable background check
-loMenuGrammarCheckAgain = Recheck Document
-loMenuNextError = Next spelling or grammar mistake
-loMenuChangeProfiles = Change Profile to
-loContextMenuRenewMarkups = Renew grammar markups
-loContextMenuOptions = Op\u00e7\u00f5es do LanguageTool
-loContextMenuDeactivateRule = Deactivate Rule
-loContextMenuIgnorePermanent = Ignore Permanent
-loContextMenuActivateRule = Activate Rule
-loContextMenuAddToDictionary = Add to Dictionary
-loContextMenuGrammarCheck = Grammar Check ...
-loContextMenuRefreshCheck = Refresh Check Results
-loContextMenuAbout = About
-loDialogLanguageHelp = The language of the paragraph shown in the editor element is displayed.\nIf you want to change the language of the underlined match or the whole paragraph, choose the new language first.\nAfter a new language is selected the "Change Language" button will be activated.
-loDialogChangeLanguageHelp = The list is activated, after a new language was selected.\nClick on the list to choose:\n - change the language of the match (underlined in the editor element)\n - the whole paragraph
-loDialogMatchDescriptionHelp = Gives a description of the possible error found by the spell or grammar checker.
-loDialogMatchParagraphHelp = Display the paragraph in which the match was found. The possible error is underlined and displayed in the defined color (spelling errors: red, grammatical errors: blue, stylistic errors: green, colors can be defined by the user in the LT option dialog).\nThe paragraph can be edited by the user.\nPress the "Change" button after editing to change the text of the document.
-loDialogSuggestionsHelp = The list of suggestions for the match is displayed.\n- Select a suggestion and press the "Change" button to replace the underlined match by the selected suggestion.\nHint: If you had changed the text in the editor element, the changed text will be replaced inside the document instead of the suggestion.
-loDialogCheckTypeHelp = Select to check:\n- only spelling\n- only grammar (and style)\n- all (spelling, grammar and style)
-loDialogHelpButtonHelp = Opens the help dialog
-loDialogOptionsButtonHelp = Opens the LT options dialog.\nThe Options can be changed by the user and saved by clicking the "OK" button of the dialog.
-loDialogUndoButtonHelp = Undoes the last action.\nUp to 20 actions can be undone.
-loDialogCloseButtonHelp = Closes the spell and grammar check dialog.
-loDialogMoreButtonHelp = For grammatical errors only:\n Opens a link in a browser to get advanced information about the error.
-loDialogIgnoreButtonHelp = Ignores the current match\n (The match is ignored till the next change of paragraph).
-loDialogIgnoreAllButtonHelp = Ignores all similar matches in the document:\n- For spelling errors: Ignore all words like the misspelled one\n- For grammatical errors: Ignore the rule\nThe words or rules are ignored till the end of the session.
-loDialogIgnorePermanentButtonHelp = Ignores the current match\n The match is ignored also after reopening the document\n until the reset ignore permanent button is clicked.
-loDialogResetIgnorePermanentButtonHelp = The permanent ignored matches will be reset.
-loDialogDeactivateRuleButtonHelp = For grammatical errors only:\n The rule is deactivated permanently\n (Can be activated again by LT option dialog).
-loDialogActivateRuleButtonHelp = Reactivate deactivated rules.
-loDialogAddToDictionaryButtonHelp = For spelling errors only:\n Choose a dictionary from the list.\n The unknown word is added to the chosen dictionary.
-loDialogChangeButtonHelp = Changes the text of the shown paragraph.\nThere are two modes of operation:\n1. If the paragraph shown in the editor element was changed by the user, the original text of the paragraph is replaced with the new text.\n2. If the paragraph shown in the editor element was not changed by the user, but at least one suggestion exist, the underlined match is replaced by the selected suggestion.\nIf there is no suggestion and no change in the editor field, the button is deactivated.
-loDialogChangeAllButtonHelp = For spelling errors only:\n Changes all misspelled words in the document to the selected suggestion.
-loDialogAutoCorrectButtonHelp = Changes all misspelled words in the document to the selected suggestion.\nAdd word-suggestion-pair to autoCorrect.
-loDialogHelpText = The spell and grammar check dialog uses the LibreOffice/OpenOffice spell check and the grammar and style check of LanguageTool.\nTo get help for single elements of the dialog, move the mouse cursor over the element in question.
-loDialogErrorCloseMessage = An internal error has occurred.\nThe LT spell and grammar check dialog will be closed.\nPlease try it again. 
-loDialogCacheLabel = Cache status
-loDialogDoNotCheck = Don't check 
-loCheckStatusInitialization = Initialization
-loCheckStatusCheck = Check
-loLabelCheckProgress = Checked text:
-loBusyMessage = LibreOffice is busy. \nPlease try later.
-loWaitMessage = Initializing dialog. \nPlease wait.
-loExtHeapMessage = LanguageTool memory limit reached. Switching to one paragraph mode. Some text-level rules will not work properly.
-loExtSwitchOffMessage = LanguageTool is switched off. Please switch it on to run this function.
-loDialogUnsupported = Grammar check doesn't support included Objects like graphics, pictures or text objects. \nPlease place the cursor into the text and start the dialog again.
-loNextErrorUnsupported = Grammar check doesn't support included Objects like graphics, pictures or text objects. \nPlease place the cursor into the text and search for next Error again.
-loNoGrammarCheckWarning = It seems the automatic grammar check is disabled. Please enable "Check grammar as you type" at "Tools"/"Options"/"Language Settings"/"Writing Aids" and restart LibreOffice/OpenOffice.
-loAboutLtDesc = Your writing assistant
-loCopyToClipBoardDesc = Copy to Clipboard
-loOpenLogFolderDesc = Open log folder
-loVersionInformation = Version Information
-loStatisticalAnalysis = Statistical Analysis
-loStatisticalAnalysisCloseButton = Close
-loStatisticalAnalysisDefaultButton = Default
-loStatisticalAnalysisSetButton = Set
-loStatisticalAnalysisWithoutDirectSpreech = Without direct speech
-loStatisticalAnalysisChapterLabel = Chapter
-loStatisticalAnalysisSubchapterLabel = Subchapter
-loStatisticalAnalysisMostUsedWords = Most used words
-loStatisticalAnalysisOptionsLabel = Options
-loStatisticalAnalysisLevels = Levels
-loStatisticalAnalysisIgnoreWordButton = Ignore word
-loStatisticalAnalysisResetIgnoredWordsButton = Reset ignored words
-loStatisticalAnalysisEntireDocument = Entire document
-loStatisticalAnalysisNotAnalyzed = Not analyzed
-loStatisticalAnalysisNumber = Number
+crh = Crimean Tatar
