--- a/languagetool-language-modules/da/src/main/resources/org/languagetool/MessagesBundle_da.properties
+++ b/languagetool-language-modules/da/src/main/resources/org/languagetool/MessagesBundle_da.properties
@@ -70,7 +70,6 @@ en-US = Engelsk (USA)
 en-CA = Engelsk (Canada)
 en-NZ = Engelsk (New Zealand)
 en-ZA = Engelsk (Sydafrika)
-enterText = Indtast eller inds\u00e6t teksten der skal kontrolleres i det \u00f8verste felt
 enterText2 = Inds\u00e6t teksten der skal kontrollers her
 eo = Esperanto
 errorContext = Sammenh\u00e6ng:
@@ -89,12 +88,10 @@ guiGeneral = Generelt
 guiProfiles = Profiles
 guiAddButton = Tilf\u00f8j
 guiCancelButton = Annuller
-guiCheckComplete = LanguageTools kontrol er f\u00e6rdig.
 guiCloseButton = Luk
 guiConfigWindowTitle = LanguageTool Indstillinger
 guiDemoText = Dette er et teksteksempel for at at vise hvordan LanguageTool virker.
 guiLanguageManagerDialog = Language Module Manager
-guiMatchCount = Mulig fejl:
 guiMenuAbout = &Om LanguageTool
 guiMenuAddRules = Hent &regelfil
 guiMenuCheckClipboard = &Kontroller tekst i klipholderen
@@ -111,42 +108,10 @@ guiMotherTongue = Dit modersm\u00e5l:
 guiNgramDir = ngram-data mappe:
 guiNgramDirSelect = - s\u00e6t mappe (kr\u00e6ver genstart) -
 guiNgramHelp = Hj\u00e6lp
-guiNoErrorsFound = Ingen fejl eller advarsler fundet (sprog: {0})
-guiNoErrorsFoundSelectedText = Ingen fejl eller advarsler fundet i den markerede tekst (sprog: {0})
 guiOKButton = &OK
-guiOOoChangeButton = &\u00c6ndr
-guiOOoChangeAllButton = Correct All
-guiOOoAutoCorrectButton = Add to AutoCorrect
-guiOOoCloseButton = &Luk
-guiOOoHelpButton = Help
-guiOOoIgnoreButton = Ignore Once
-guiOOoIgnoreAllButton = Ignorer alle
-guiOOoIgnoreRuleButton = Ignore Rule
-guiOOoaddToDictionary = Add to Dictionary
-guiOOosuggestions = Suggestions:
-# is part of selection: Check: All | Only Spelling | Only Grammar
-guiOOoCheckTypeLabel = Check:
-# is part of selection: Check: All | Only Spelling | Only Grammar
-guiOOoCheckAllButton = All
-# is part of selection: Check: All | Only Spelling | Only Grammar
-guiOOoCheckSpellingButton = Only Spelling
-# is part of selection: Check: All | Only Spelling | Only Grammar
-guiOOoCheckGrammarButton = Only Grammar
-guiOOoCheckOnlyRuleButton = Only Rule
 guiTurnOffRule = Sl\u00e5 reglen fra
-guiOOoOptionsButton = In&dstillinger...
-guiOOoCheckDialogName = Spell and Grammar Check Dialog
-guiOOoChangeLanguageRequest = Change Language
-# is part of selection: Change Language: Of Match | Of Paragraph
-guiOOoChangeLanguageMatch = Of Match
-# is part of selection: Change Language: Of Match | Of Paragraph
-guiOOoChangeLanguageParagraph = Of Paragraph
-guiProgressWindowTitle = LanguageTool: Kontrollere tekst...
 guiRemoveButton = Fjern
-guiReplaceWindowTitle = Erstat tekst
-guiReplaceWithOtherText = <anden tekst>
 guiRunOnPort = K\u00f8r som service p\u00e5 po&rt
-guiSelectionCheckComplete = LanguageTools kontrol af markerede tekst er f\u00e6rdig.
 guiTagText = Opm\u00e6rk &teksten 
 guiExamples = Eksempler:
 guiCurrentProfile = Current Profile:
@@ -157,33 +122,21 @@ guiDeleteProfile = Delete current Profile
 guiAddNewProfile = Add a new Profile:
 guiAddProfile = Add Profile
 guiImportProfile = Import Profile
-guiAddProfileName = Navn:
-guiAddProfileButton = Add
 guiUserProfile = Default Profile
 guiDisabledDefaultRules = Disabled Default Rules
 guiEnabledOptionalRules = Enabled Optional Rules
 guiUseDocumentLanguage = Use document language
 guiSetLanguageTo = Set language to
-guiCheckOnlyParagraph = Check only the sentence containing paragraph (fastest)
-guiCheckFullText = Kontroller hele teksten (langsomst)
-guiCheckChapter = Check the chapter
-guiCheckNumParagraphs = Check Number of paragraphs surround sentence (1 - 99):
 guiTextCheckMode = Text Check Mode
 guiParagraphCheckMode = Paragraph Check Mode 
 guiDeveloperModeCheck = Developer Mode - Select (-2, -1, 1, ..., 99):
-guiDoResetCheck = Check all paragraphs again after every change of text
-guiNoMultiReset = Only if a single document is loaded
 # Use only one CPU core:
 guiOneThread = Use only one core
 guiIsMultiThread = Use more than one core (faster but high CPU load)
-guiUseTextLevelQueue = Check text level rules parallel
 guiNoBackgroundCheck = Disable background-processing check of text
-guiTextChangeLabel = After text change:
 guiSentenceExceedingRules = Sentence exceeding rules:
 guiTechnicalSettings = Technical settings:
-guiCheckFullTextAtFirst = Check full text after a document is loaded
 guiUseLtSpellChecker = Use LanguageTool spell checker
-guiSpellCheckerWarning = Heap space too small: LanguageTool spell checker is not used.\nSet the heap space to at least 1024 MB to use the LanguageTool spell checker
 guiNoSynonymsAsSuggestions = Do not use synonyms as suggestions (faster, regards only few rules)
 guiIncludeTrackedChanges = Include tracked changes
 guiActivateTempOffRules = Enable temporarily disabled rules
@@ -195,16 +148,21 @@ guiUseServer = Use server:
 guiUseServerExample = (http://Server_Name:Port) WITHOUT /v2
 guiUseServerWarning1 = Please use URL like http://Server_Name:Port or https://Server_Name:Port
 guiUseServerWarning2 = Don't add "/v2" or "/" at the end of URL
-guiUseServerSettings = Use server settings
-guiStyleRepeatedWordText = Maximum distance between two repeated words (0 - 5 sentences):
 guiUsePremiumAccount = Use premium account (for premium user)
-guiLongSentencesText = Maximum sentences length (5 - 100 words):
 guiPremiumUsername = User name:
-guiLongParagraphsText = Maximum paragraphs length (5 - 200 words):
 guiPremiumApiKey = API Key:
-guiUnderlineColor = Underline Color of Category
-guiUColorHint = Underline colors are supported by LibreOffice version 6.2.0 and higher
-guiUColorHint1 = Underline types are supported by LibreOffice version 6.3.0 and higher
+guiAiSupportSettings = AI Support Settings
+guiUseAiSupport = Use AI Support
+guiAiUrl = AI Server URL
+guiAiModel = AI Model
+guiAiApiKey = AI API Key
+guiAiAutoCorrect = Enable automatic Error detection
+guiAiShowStylisticChanges = Show also suggestions for stylistic changes
+guiAiExperimentalHint = NOTE: This feature is still very experimental.
+guiAiQualityHint = The speed and quality of the results depends on the installation and model used.
+guiStyleRepeatedWordText = Maximum distance between two repeated words (0 - 5 sentences):
+guiLongSentencesText = Maximum sentences length (5 - 100 words):
+guiLongParagraphsText = Maximum paragraphs length (5 - 200 words):
 guiMarkSingleCharBold = underline a single character error by a bold wave
 guiUColorStyleLabel = Underline style and color:
 guiUColorChange = \u00c6ndr
@@ -262,7 +220,6 @@ pt-PT = Portugisisk (Portugal posAO)
 guiWarning = Advarsel
 guiDuplicate = Dublet af regelfil!
 ja = Japansk
-language_not_supported = Fejl: Beklager, dokumentsproget "{0}" er ikke underst\u00f8ttet af LanguageTool.
 http_server_start_failed = LanguageTool HTTP server kunne ikke startes p\u00e5 host "{0}", port {1}.\nM\u00e5ske k\u00f8re der allerede noget andet p\u00e5 denne port?
 https_server_start_failed = LanguageTool HTTP server kunne ikke startes p\u00e5 host "{0}", port {1}.\nM\u00e5ske k\u00f8re der allerede noget andet p\u00e5 denne port?
 https_server_start_failed_unknown_reason = LanguageTool HTTP server kunne ikke startes p\u00e5 v\u00e6rten "{0}", port {1}
@@ -314,7 +271,6 @@ guiCollapseAll = Sammenfold alt
 guiAboutRuleMenu = Om regel...
 guiAboutRuleTitle = Om regel
 long_sentence_rule_desc = L\u00e6sbarhed: s\u00e6tning p\u00e5 over {0} ord
-long_sentence_rule_msg = S\u00e6tningen er over {0} ord lang, overvej en omskrivning
 long_sentence_rule_msg2 = This sentence is over {0} words long at the marked position, consider revising
 long_paragraph_rule_desc = Readability: paragraph over {0} words
 long_paragraph_rule_msg = Paragraph is over {0} words long, consider revising
@@ -329,7 +285,6 @@ whitespace_at_begin_parapgraph_desc = Space character at the beginning of paragr
 whitespace_at_begin_parapgraph_msg = Please delete the space character at the beginning of the paragraph.
 repetition_paragraph_beginning_desc = Same beginning of paragraph
 repetition_paragraph_beginning_last_msg = Same beginning as last paragraph
-repetition_paragraph_beginning_next_msg = Same beginning as next paragraph
 punctuation_mark_paragraph_end_desc = No punctuation mark at the end of paragraph
 punctuation_mark_paragraph_end_msg = Please add a punctuation mark at the end of paragraph
 guiLookAndFeelMenu = Udseende (look & feel)
@@ -343,8 +298,6 @@ statistics_suggest2_new = Please check whether ''{0}'' ({1}) might be the correc
 statistics_suggest3_new = Please check whether ''{0}'' might be the correct word here instead of ''{1}''.
 statistics_suggest4_new = Please check whether ''{0}'' might be the correct word here instead of ''{1}'' ({2}).
 statistics_suggest_short_desc = Possible word confusion
-neural_network_suggest_with_description = Our neural network thinks that ''{0}'' ({1}) might be the correct word here, not ''{2}'' ({3}). Please check.
-neural_network_suggest = Our neural network thinks that ''{0}'' might be the correct word here, not ''{1}''. Please check.
 unsupportedWarning = Bem\u00e6rk: Dette sprog er ikke fuldt ud supporteret i LanguageTool, da der reelt ikke er nogen der vedligeholder det. <a href="https://languagetool.org/contribute/">Se hvordan du kan hj\u00e6lpe.</a>
 token = Token
 disambiguatorLog = Flertydighedslog 
@@ -362,76 +315,7 @@ sr-BA = Serbisk (Bosnien)
 sr-HR = Serbisk (Kroatien)
 sr-ME = Serbisk (Montenegro)
 too_many_errors = (suggestion limit reached)
-loRemoteSwitchToLocal = Connection refused: \nSwitch to internal LanguageTool application
 loRemoteInfoDefaultServer = The extension will check your text by sending it to LanguageTool.org over an encrypted connection. Your text will not be stored.
 loRemoteInfoOtherServer = The extension will check your text by sending it to the remote server "{0}". Contact the server administrator for information about privacy protection.
 loMenuRemoteInfo = Remote Check Hint
-loMenuResetIgnorePermanent = Reset Ignore Permanent
-loMenuEnableBackgroundCheck = Enable background check
-loMenuDisableBackgroundCheck = Disable background check
-loMenuGrammarCheckAgain = Recheck Document
-loMenuNextError = Next spelling or grammar mistake
-loMenuChangeProfiles = Change Profile to
-loContextMenuRenewMarkups = Renew grammar markups
-loContextMenuOptions = LanguageTool Indstillinger
-loContextMenuDeactivateRule = Deactivate Rule
-loContextMenuIgnorePermanent = Ignore Permanent
-loContextMenuActivateRule = Activate Rule
-loContextMenuAddToDictionary = Add to Dictionary
-loContextMenuGrammarCheck = Grammar Check ...
-loContextMenuRefreshCheck = Refresh Check Results
-loContextMenuAbout = About
-loDialogLanguageHelp = The language of the paragraph shown in the editor element is displayed.\nIf you want to change the language of the underlined match or the whole paragraph, choose the new language first.\nAfter a new language is selected the "Change Language" button will be activated.
-loDialogChangeLanguageHelp = The list is activated, after a new language was selected.\nClick on the list to choose:\n - change the language of the match (underlined in the editor element)\n - the whole paragraph
-loDialogMatchDescriptionHelp = Gives a description of the possible error found by the spell or grammar checker.
-loDialogMatchParagraphHelp = Display the paragraph in which the match was found. The possible error is underlined and displayed in the defined color (spelling errors: red, grammatical errors: blue, stylistic errors: green, colors can be defined by the user in the LT option dialog).\nThe paragraph can be edited by the user.\nPress the "Change" button after editing to change the text of the document.
-loDialogSuggestionsHelp = The list of suggestions for the match is displayed.\n- Select a suggestion and press the "Change" button to replace the underlined match by the selected suggestion.\nHint: If you had changed the text in the editor element, the changed text will be replaced inside the document instead of the suggestion.
-loDialogCheckTypeHelp = Select to check:\n- only spelling\n- only grammar (and style)\n- all (spelling, grammar and style)
-loDialogHelpButtonHelp = Opens the help dialog
-loDialogOptionsButtonHelp = Opens the LT options dialog.\nThe Options can be changed by the user and saved by clicking the "OK" button of the dialog.
-loDialogUndoButtonHelp = Undoes the last action.\nUp to 20 actions can be undone.
-loDialogCloseButtonHelp = Closes the spell and grammar check dialog.
-loDialogMoreButtonHelp = For grammatical errors only:\n Opens a link in a browser to get advanced information about the error.
-loDialogIgnoreButtonHelp = Ignores the current match\n (The match is ignored till the next change of paragraph).
-loDialogIgnoreAllButtonHelp = Ignores all similar matches in the document:\n- For spelling errors: Ignore all words like the misspelled one\n- For grammatical errors: Ignore the rule\nThe words or rules are ignored till the end of the session.
-loDialogIgnorePermanentButtonHelp = Ignores the current match\n The match is ignored also after reopening the document\n until the reset ignore permanent button is clicked.
-loDialogResetIgnorePermanentButtonHelp = The permanent ignored matches will be reset.
-loDialogDeactivateRuleButtonHelp = For grammatical errors only:\n The rule is deactivated permanently\n (Can be activated again by LT option dialog).
-loDialogActivateRuleButtonHelp = Reactivate deactivated rules.
-loDialogAddToDictionaryButtonHelp = For spelling errors only:\n Choose a dictionary from the list.\n The unknown word is added to the chosen dictionary.
-loDialogChangeButtonHelp = Changes the text of the shown paragraph.\nThere are two modes of operation:\n1. If the paragraph shown in the editor element was changed by the user, the original text of the paragraph is replaced with the new text.\n2. If the paragraph shown in the editor element was not changed by the user, but at least one suggestion exist, the underlined match is replaced by the selected suggestion.\nIf there is no suggestion and no change in the editor field, the button is deactivated.
-loDialogChangeAllButtonHelp = For spelling errors only:\n Changes all misspelled words in the document to the selected suggestion.
-loDialogAutoCorrectButtonHelp = Changes all misspelled words in the document to the selected suggestion.\nAdd word-suggestion-pair to autoCorrect.
-loDialogHelpText = The spell and grammar check dialog uses the LibreOffice/OpenOffice spell check and the grammar and style check of LanguageTool.\nTo get help for single elements of the dialog, move the mouse cursor over the element in question.
-loDialogErrorCloseMessage = An internal error has occurred.\nThe LT spell and grammar check dialog will be closed.\nPlease try it again. 
-loDialogCacheLabel = Cache status
-loDialogDoNotCheck = Don't check 
-loCheckStatusInitialization = Initialization
-loCheckStatusCheck = Check
-loLabelCheckProgress = Checked text:
-loBusyMessage = LibreOffice is busy. \nPlease try later.
-loWaitMessage = Initializing dialog. \nPlease wait.
-loExtHeapMessage = LanguageTool memory limit reached. Switching to one paragraph mode. Some text-level rules will not work properly.
-loExtSwitchOffMessage = LanguageTool is switched off. Please switch it on to run this function.
-loDialogUnsupported = Grammar check doesn't support included Objects like graphics, pictures or text objects. \nPlease place the cursor into the text and start the dialog again.
-loNextErrorUnsupported = Grammar check doesn't support included Objects like graphics, pictures or text objects. \nPlease place the cursor into the text and search for next Error again.
-loNoGrammarCheckWarning = It seems the automatic grammar check is disabled. Please enable "Check grammar as you type" at "Tools"/"Options"/"Language Settings"/"Writing Aids" and restart LibreOffice/OpenOffice.
-loAboutLtDesc = Your writing assistant
-loCopyToClipBoardDesc = Copy to Clipboard
-loOpenLogFolderDesc = Open log folder
-loVersionInformation = Version Information
-loStatisticalAnalysis = Statistical Analysis
-loStatisticalAnalysisCloseButton = Close
-loStatisticalAnalysisDefaultButton = Default
-loStatisticalAnalysisSetButton = Set
-loStatisticalAnalysisWithoutDirectSpreech = Without direct speech
-loStatisticalAnalysisChapterLabel = Chapter
-loStatisticalAnalysisSubchapterLabel = Subchapter
-loStatisticalAnalysisMostUsedWords = Most used words
-loStatisticalAnalysisOptionsLabel = Options
-loStatisticalAnalysisLevels = Levels
-loStatisticalAnalysisIgnoreWordButton = Ignore word
-loStatisticalAnalysisResetIgnoredWordsButton = Reset ignored words
-loStatisticalAnalysisEntireDocument = Entire document
-loStatisticalAnalysisNotAnalyzed = Not analyzed
-loStatisticalAnalysisNumber = Number
+crh = Crimean Tatar
