--- a/languagetool-language-modules/sv/src/main/resources/org/languagetool/MessagesBundle_sv.properties
+++ b/languagetool-language-modules/sv/src/main/resources/org/languagetool/MessagesBundle_sv.properties
@@ -70,7 +70,6 @@ en-US = Engelska (USA)
 en-CA = Engelska (Kanada)
 en-NZ = Engelska (Nya Zeeland)
 en-ZA = Engelska (Sydafrika)
-enterText = Skriv eller klistra in text i \u00f6vre f\u00e4ltet
 enterText2 = L\u00e4gg in text f\u00f6r kontroll h\u00e4r
 eo = Esperanto
 errorContext = Sammanhang:
@@ -89,12 +88,10 @@ guiGeneral = Allm\u00e4nt
 guiProfiles = Profiles
 guiAddButton = L\u00e4gg till...
 guiCancelButton = Avbryt
-guiCheckComplete = LanguageTool-granskningen \u00e4r slutf\u00f6rd.
 guiCloseButton = St\u00e4ng
 guiConfigWindowTitle = Alternativ f\u00f6r LanguageTool
 guiDemoText = Detta \u00e4r en exempeltext f\u00f6r att visa hur LanguageTool fungerar.
 guiLanguageManagerDialog = Hantering av spr\u00e5kmoduler
-guiMatchCount = M\u00f6jliga fel:
 guiMenuAbout = &Om ...
 guiMenuAddRules = L\u00e4s in &regelfil ...
 guiMenuCheckClipboard = &Kontrollera texten i Urklipp
@@ -111,42 +108,10 @@ guiMotherTongue = Ditt modersm\u00e5l:
 guiNgramDir = datamapp f\u00f6r ngram:
 guiNgramDirSelect = - ange mapp (kr\u00e4ver omstart) -
 guiNgramHelp = Hj\u00e4lp
-guiNoErrorsFound = Inga fel eller varningar hittades (spr\u00e5k: {0})
-guiNoErrorsFoundSelectedText = Inga fel eller varningar hittades i markerad text (spr\u00e5k: {0})
 guiOKButton = &OK
-guiOOoChangeButton = \u00c4ndra
-guiOOoChangeAllButton = Ers\u00e4tt alla
-guiOOoAutoCorrectButton = L\u00e4gg till i AutoCorrect
-guiOOoCloseButton = St\u00e4ng
-guiOOoHelpButton = Hj\u00e4lp
-guiOOoIgnoreButton = Ignorera den h\u00e4r g\u00e5ngen
-guiOOoIgnoreAllButton = Ignorera alla
-guiOOoIgnoreRuleButton = Ignorera regel
-guiOOoaddToDictionary = L\u00e4gg till i ordlista
-guiOOosuggestions = F\u00f6rslag:
-# is part of selection: Check: All | Only Spelling | Only Grammar
-guiOOoCheckTypeLabel = Granska:
-# is part of selection: Check: All | Only Spelling | Only Grammar
-guiOOoCheckAllButton = Allt
-# is part of selection: Check: All | Only Spelling | Only Grammar
-guiOOoCheckSpellingButton = Endast stavning
-# is part of selection: Check: All | Only Spelling | Only Grammar
-guiOOoCheckGrammarButton = Endast grammatik
-guiOOoCheckOnlyRuleButton = Endast regel
 guiTurnOffRule = Inaktivera regel
-guiOOoOptionsButton = Alternativ ...
-guiOOoCheckDialogName = Granska grammatik och stavning
-guiOOoChangeLanguageRequest = V\u00e4xla spr\u00e5k
-# is part of selection: Change Language: Of Match | Of Paragraph
-guiOOoChangeLanguageMatch = F\u00f6r markering
-# is part of selection: Change Language: Of Match | Of Paragraph
-guiOOoChangeLanguageParagraph = F\u00f6r stycke
-guiProgressWindowTitle = LanguageTool: Kontrollerar text ...
 guiRemoveButton = Ta bort
-guiReplaceWindowTitle = Ers\u00e4tt text
-guiReplaceWithOtherText = <annan text>
 guiRunOnPort = K\u00f6r som server p\u00e5 po&rt
-guiSelectionCheckComplete = LanguageTool-granskningen av markerad text \u00e4r slutf\u00f6rd.
 guiTagText = &Tagga text
 guiExamples = Exempel:
 guiCurrentProfile = Aktuell profil:
@@ -157,33 +122,21 @@ guiDeleteProfile = Ta bort aktuell profil
 guiAddNewProfile = L\u00e4gg till ny profil:
 guiAddProfile = L\u00e4gg till profil
 guiImportProfile = Importera profil
-guiAddProfileName = Namn:
-guiAddProfileButton = L\u00e4gg till
 guiUserProfile = Standardprofil
 guiDisabledDefaultRules = Avaktivera standardregler
 guiEnabledOptionalRules = Aktivera valfria regler
 guiUseDocumentLanguage = Anv\u00e4nd dokumentets spr\u00e5k
 guiSetLanguageTo = S\u00e4tt spr\u00e5k till
-guiCheckOnlyParagraph = Granska bara det stycke som inneh\u00e5ller en mening (snabbast)
-guiCheckFullText = Granska hela texten (l\u00e5ngsammast)
-guiCheckChapter = Granska kapitlet
-guiCheckNumParagraphs = Granska antal stycken som omger meningen (1 - 99):
 guiTextCheckMode = Textgranskningsl\u00e4ge
 guiParagraphCheckMode = Styckesgranskningsl\u00e4ge 
 guiDeveloperModeCheck = Utvecklarl\u00e4ge - v\u00e4lj (-2, -1, 1, ..., 99):
-guiDoResetCheck = Granska alla stycken varje g\u00e5ng texten \u00e4ndras
-guiNoMultiReset = Endast om ett enda dokument \u00e4r \u00f6ppet
 # Use only one CPU core:
 guiOneThread = Anv\u00e4nd endast en CPU-k\u00e4rna
 guiIsMultiThread = Anv\u00e4nd flera CPU-k\u00e4rnor (snabbare men belastningen blir h\u00f6gre)
-guiUseTextLevelQueue = Granska text-niv\u00e5regler parallellt
 guiNoBackgroundCheck = Avaktivera bakgrundsgranskning av texter
-guiTextChangeLabel = Efter \u00e4ndringar i texten:
 guiSentenceExceedingRules = Regler f\u00f6r h\u00f6gsta meningsl\u00e4ngd:
 guiTechnicalSettings = Tekniska inst\u00e4llningar:
-guiCheckFullTextAtFirst = Granska hela texten n\u00e4r dokumentet laddats in
 guiUseLtSpellChecker = Anv\u00e4nd LanguageTools stavningskontroll
-guiSpellCheckerWarning = LanguageTools minnesgr\u00e4ns har n\u00e5tts: LanguageTools stavningskontroll anv\u00e4nds inte.\nS\u00e4tt stackminnesutrymmet (heap) till \u00e5tminstone 1024 MB f\u00f6r att anv\u00e4nda Language Tools stavningskontroll.
 guiNoSynonymsAsSuggestions = Anv\u00e4nd inte synonymer som f\u00f6rslag (snabbare, g\u00e4ller endast n\u00e5gra f\u00e5 regler)
 guiIncludeTrackedChanges = Inkludera sp\u00e5rade \u00e4ndringar
 guiActivateTempOffRules = Aktivera tillf\u00e4lligt avst\u00e4ngda regler
@@ -195,16 +148,21 @@ guiUseServer = Anv\u00e4nd server:
 guiUseServerExample = (http://servername:port) UTAN /v2
 guiUseServerWarning1 = Ange en URL som http://servernamn:port eller https://servernamn:port
 guiUseServerWarning2 = Ange inte "/v2" eller "/" i slutet av URL:en
-guiUseServerSettings = Anv\u00e4nd serverinst\u00e4llningar
-guiStyleRepeatedWordText = Maximalt avst\u00e5nd mellan tv\u00e5 upprepade ord  (0 - 5 meningar):
 guiUsePremiumAccount = Anv\u00e4nd premium (f\u00f6r anv\u00e4ndare med premiumkonto)
-guiLongSentencesText = Maximal l\u00e4ngd f\u00f6r meningar (5 - 100 ord):
 guiPremiumUsername = Anv\u00e4ndanamn:
-guiLongParagraphsText = Maximal l\u00e4ngd f\u00f6r stycken (5 - 200 ord):
 guiPremiumApiKey = API-nyckel:
-guiUnderlineColor = Understrecksf\u00e4rg f\u00f6r kategori
-guiUColorHint = Understrecksf\u00e4rger st\u00f6ds av LibreOffice version 6.2.0 eller h\u00f6gre
-guiUColorHint1 = Understreckstyper st\u00f6ds av LibreOffice version 6.3.0 eller h\u00f6gre
+guiAiSupportSettings = AI Support Settings
+guiUseAiSupport = Use AI Support
+guiAiUrl = AI Server URL
+guiAiModel = AI Model
+guiAiApiKey = AI API Key
+guiAiAutoCorrect = Enable automatic Error detection
+guiAiShowStylisticChanges = Show also suggestions for stylistic changes
+guiAiExperimentalHint = NOTE: This feature is still very experimental.
+guiAiQualityHint = The speed and quality of the results depends on the installation and model used.
+guiStyleRepeatedWordText = Maximalt avst\u00e5nd mellan tv\u00e5 upprepade ord  (0 - 5 meningar):
+guiLongSentencesText = Maximal l\u00e4ngd f\u00f6r meningar (5 - 100 ord):
+guiLongParagraphsText = Maximal l\u00e4ngd f\u00f6r stycken (5 - 200 ord):
 guiMarkSingleCharBold = understryk enskilda bokst\u00e4ver med en fet v\u00e5g
 guiUColorStyleLabel = Undertrecksstil och -f\u00e4rg:
 guiUColorChange = \u00c4ndra
@@ -262,7 +220,6 @@ pt-PT = Portugisiska (Portugal posAO)
 guiWarning = Varning
 guiDuplicate = Regelfilen har en dubblett!
 ja = Japanska
-language_not_supported = Fel: LanguageTool har \u00e4nnu inget st\u00f6d f\u00f6r dokumentets spr\u00e5k "{0}".
 http_server_start_failed = LanguageTools HTTP-server kunde inte startas p\u00e5 v\u00e4rden "{0}", port {1}.\nKanske n\u00e5got annat redan k\u00f6rs p\u00e5 den porten?
 https_server_start_failed = LanguageTools HTTPS-server kunde inte startas p\u00e5 v\u00e4rden "{0}", port {1}.\nKanske n\u00e5got annat redan k\u00f6rs p\u00e5 den porten?
 https_server_start_failed_unknown_reason = LanguageTools HTTPS-server kunde inte startas p\u00e5 v\u00e4rden "{0}", port {1}
@@ -314,7 +271,6 @@ guiCollapseAll = Komprimera alla
 guiAboutRuleMenu = Om regeln ...
 guiAboutRuleTitle = Om regeln
 long_sentence_rule_desc = L\u00e4sbarhet: meningen fler \u00e4n {0} ord
-long_sentence_rule_msg = Meningen \u00e4r \u00f6ver {0} ord l\u00e5ng, \u00f6verv\u00e4g en revidering
 long_sentence_rule_msg2 = Meningen \u00e4r \u00f6ver {0} ord l\u00e5ng. \u00d6verv\u00e4g att dela upp den i flera f\u00f6r att g\u00f6ra texten l\u00e4ttare att l\u00e4sa.
 long_paragraph_rule_desc = L\u00e4sbarhet: stycke l\u00e4ngre \u00e4n {0} ord
 long_paragraph_rule_msg = Stycket \u00e4r l\u00e4ngre \u00e4n {0} ord. \u00d6verv\u00e4g att skriva om det genom att dela upp i flera stycken om det passar strukturellt och inneh\u00e5llsm\u00e4ssigt.
@@ -329,7 +285,6 @@ whitespace_at_begin_parapgraph_desc = Blanksteg i b\u00f6rjan av stycke
 whitespace_at_begin_parapgraph_msg = Ta bort blanksteget i b\u00f6rjan av stycket.
 repetition_paragraph_beginning_desc = Samma inledning p\u00e5  stycke
 repetition_paragraph_beginning_last_msg = Samma inledning som f\u00f6rra stycket
-repetition_paragraph_beginning_next_msg = Samma inledning som n\u00e4sta stycke
 punctuation_mark_paragraph_end_desc = Inget skiljetecken i slutet av stycket
 punctuation_mark_paragraph_end_msg = L\u00e4gg till ett skiljetecken i slutet av sista meningen i stycket.
 guiLookAndFeelMenu = Utseende och k\u00e4nsla
@@ -343,8 +298,6 @@ statistics_suggest2_new = Kolla om ''{0}'' ({1}) passar b\u00e4ttre h\u00e4r ist
 statistics_suggest3_new = Kolla om ''{0}'' passar b\u00e4ttre h\u00e4r ist\u00e4llet f\u00f6r ''{1}''.
 statistics_suggest4_new = Kolla om ''{0}'' passar b\u00e4ttre h\u00e4r ist\u00e4llet f\u00f6r ''{1}'' ({2}).
 statistics_suggest_short_desc = M\u00f6jlig f\u00f6rv\u00e4xling av ord
-neural_network_suggest_with_description = V\u00e5rt artificiella neuronn\u00e4t tycker att ''{0}'' ({1}) kanske \u00e4r det korrekta ordet h\u00e4r, inte ''{2}'' ({3}). Du b\u00f6r kontrollera detta.
-neural_network_suggest = V\u00e5rt artificiella neuronn\u00e4t tycker att ''{0}'' ({1}) kanske \u00e4r det korrekta ordet h\u00e4r. Du b\u00f6r kontrollera detta.
 unsupportedWarning = Obs: Detta spr\u00e5k st\u00f6ds inte fullt ut i LanguageTool eftersom ingen underh\u00e5ller det aktivt. <a href="https://languagetool.org/contribute/">Se hur du kan hj\u00e4lpa till.</a>
 token = Token
 disambiguatorLog = Disambigueringslogg
@@ -362,76 +315,7 @@ sr-BA = Serbiska (Bosnien)
 sr-HR = Serbiska (Kroatien)
 sr-ME = Serbiska (Montenegro)
 too_many_errors = (f\u00f6rslagsgr\u00e4nsen har n\u00e5tts)
-loRemoteSwitchToLocal = Uppkoppling v\u00e4gras: \nV\u00e4xla till den inbyggda LanguageTool-applikationen
 loRemoteInfoDefaultServer = Till\u00e4gget granskar din text genom att skicka den till LanguageTool.org \u00f6ver en krypterad anslutning. Din text sparas inte p\u00e5 servern.
 loRemoteInfoOtherServer = Till\u00e4gget granskar din text genom att skicka den till en fj\u00e4rrserver "{0}". Kontakta serverns administrat\u00f6r om du \u00e4r os\u00e4ker p\u00e5 dess dataskyddspolicy.
 loMenuRemoteInfo = Frj\u00e4rrgranskningstips
-loMenuResetIgnorePermanent = \u00c5terst\u00e4ll ignorera permanent
-loMenuEnableBackgroundCheck = Aktivera granskning i bakgrunden
-loMenuDisableBackgroundCheck = Avaktivera granskning i bakgrunden
-loMenuGrammarCheckAgain = Granska dokumentet igen
-loMenuNextError = N\u00e4sta stavnings- eller grammatikkontrollpunkt
-loMenuChangeProfiles = V\u00e4xla profil till
-loContextMenuRenewMarkups = Uppdatera grammatikkontollpunkterna
-loContextMenuOptions = Alternativ f\u00f6r LanguageTool
-loContextMenuDeactivateRule = Avaktivera regeln
-loContextMenuIgnorePermanent = Ignorera permanent
-loContextMenuActivateRule = Aktivera regeln
-loContextMenuAddToDictionary = L\u00e4gg till i ordlista
-loContextMenuGrammarCheck = Granska grammatik ...
-loContextMenuRefreshCheck = Uppdatera granskningsresultaten
-loContextMenuAbout = Om
-loDialogLanguageHelp = Spr\u00e5ket f\u00f6r stycket visas i editorn.\nOm du vill byta spr\u00e5k f\u00f6r markeringen eller hela stycket, v\u00e4lj det nya spr\u00e5ket f\u00f6rst.\nEfter att det nya spr\u00e5ket \u00e4r valt aktiveras "V\u00e4lj spr\u00e5k"-knappen.
-loDialogChangeLanguageHelp = Listen \u00e4r aktiverad efter att ett nytt spr\u00e5k valts.\nKlicka p\u00e5 listen f\u00f6r att v\u00e4lja:\n- \u00e4ndra spr\u00e5k f\u00f6r markeringen (understruken i editorn)\n- hela stycket
-loDialogMatchDescriptionHelp = Ger en beskrivning av kontrollpunkten som hittats vid stavnings- och grammatikgranskningen.
-loDialogMatchParagraphHelp = Visa styket som markeringen hittades i. Kontrollpunkten \u00e4r understruken och visas i den valda f\u00e4rgen (stavning: r\u00f6d, grammatik: bl\u00e5, stil: gr\u00f6n, f\u00e4rgerna kan \u00e4ndras i LT-inst\u00e4llningarna).\nStycket kan \u00e4ndras av anv\u00e4ndaren.\nKlicka p\u00e5 "\u00e4ndra"-knappen f\u00f6r att g\u00f6ra \u00e4ndringarna i texten.
-loDialogSuggestionsHelp = Listan med f\u00f6rslag f\u00f6r markeringen visas.\n- V\u00e4lj ett f\u00f6rslag och klicka p\u00e5 "\u00e4ndra"-knappen f\u00f6r att ers\u00e4tta det understrukna med det valda ers\u00e4ttningsf\u00f6rslaget.\nTips: Om du \u00e4ndrat texten i editorn, ers\u00e4tts markeringen med den texten ist\u00e4llet f\u00f6r av ers\u00e4ttningsf\u00f6rslaget.
-loDialogCheckTypeHelp = V\u00e4lj att granska:\n- endast stavning\n- endast grammatik (och stil)\n- allt (stavning, grammatik och stil)
-loDialogHelpButtonHelp = \u00d6ppnar hj\u00e4lp-dialogen
-loDialogOptionsButtonHelp = \u00d6ppnar LT-inst\u00e4llningsdialogen.\nInst\u00e4llningarna kan \u00e4ndras och sparas sedan n\u00e4r anv\u00e4ndaren klickar p\u00e5 "OK"-knappen i dialogrutan.
-loDialogUndoButtonHelp = \u00c5ngra den senaste \u00e5tg\u00e4rden.\nUpp till 20 av de senaste \u00e5tg\u00e4rderna kan \u00e5ngras.
-loDialogCloseButtonHelp = St\u00e4nger spr\u00e5kgranskningsdialogen.
-loDialogMoreButtonHelp = F\u00f6r grammatikkontrollen endast:\n \u00d6ppnar en l\u00e4nk i webbl\u00e4saren f\u00f6r att ge kontext och f\u00f6rdjupning till f\u00f6rslaget.
-loDialogIgnoreButtonHelp = Ignorera den aktuella kontrollpunkten\n (Markeringen ignoreras till dess stycket \u00e4ndras igen).
-loDialogIgnoreAllButtonHelp = Ignorera alla liknande kontrollpunkter i dokumentet:\n- F\u00f6r stavning: Ignorera alla f\u00f6rekomster av ordet\n- F\u00f6r grammatik: Ignorerar regeln\nOrden och reglerna ignoreras till dess sessionen avslutas.
-loDialogIgnorePermanentButtonHelp = Ignorera den aktuella kontrollpunkten\n Markeringen ignoreras \u00e4ven efter att dokumentet \u00f6ppnats igen\n till dess "\u00e5terst\u00e4ll permanent"-knappen har klickats p\u00e5.
-loDialogResetIgnorePermanentButtonHelp = De permanent ignorerade markeringarna \u00e5terst\u00e4lls.
-loDialogDeactivateRuleButtonHelp = F\u00f6r grammatikkontrollen endast:\n Regeln avaktiveras permanent\n (Kan \u00e5teraktiveras i LT-inst\u00e4llningsdialogen).
-loDialogActivateRuleButtonHelp = \u00c5teraktivera avaktiverade regler.
-loDialogAddToDictionaryButtonHelp = F\u00f6r stavningskontroll endast:\n V\u00e4lj en ordlista fr\u00e5n listan.\n Det ok\u00e4nda ordet l\u00e4ggs till den valda ordlistan.
-loDialogChangeButtonHelp = \u00c4ndrar texten i det visade stycket.\nDet \u00e4r tv\u00e5 l\u00e4gen:\n1. Om stycket som visas i editorn var \u00e4ndrat av anv\u00e4ndaren, ers\u00e4tts den ursprungliga texten i stycket av den nya.\n2. Om stycket som visas i editorn inte var \u00e4ndrat av anv\u00e4ndaren, men minst ett f\u00f6rslag finns, s\u00e5 ers\u00e4tts markeringen med det valda ers\u00e4ttningsf\u00f6rslaget.\nOm det inte finns n\u00e5got f\u00f6rslag och ingen \u00e4ndring gjorts i editorn, s\u00e5 \u00e4r knappen avaktiverad.
-loDialogChangeAllButtonHelp = F\u00f6r stavningskontroll endast:\n \u00c4ndrar alla felstavade ord i dokumentet till det valda ers\u00e4ttningsf\u00f6rslaget.
-loDialogAutoCorrectButtonHelp = Byter alla markerade ord till de f\u00f6reslagna i hela dokumentet.\nL\u00e4gg till ordf\u00f6rslags-par till AutoCorrect.
-loDialogHelpText = Spr\u00e5kgranskningen anv\u00e4nder LibreOffice/OpenOffices stavningskontroll och grammatik- och stilkontroll fr\u00e5n LanguageTool.\nF\u00f6r att f\u00e5 hj\u00e4lp f\u00f6r enskilda element i dialogen, flytta mark\u00f6ren till elementet i fr\u00e5ga.
-loDialogErrorCloseMessage = Ett internt fel har uppst\u00e5tt.\nLT-granskningsdialogen st\u00e4ngs.\nF\u00f6rs\u00f6k igen. 
-loDialogCacheLabel = Cache-status
-loDialogDoNotCheck = Granska inte 
-loCheckStatusInitialization = Startar
-loCheckStatusCheck = Granska
-loLabelCheckProgress = Granskad text:
-loBusyMessage = LibreOffice \u00e4r upptaget.  \nF\u00f6rs\u00f6k igen senare.
-loWaitMessage = Initialiserar dialogrutan.  \nV\u00e4nta.
-loExtHeapMessage = LanguageTools minnesgr\u00e4ns har n\u00e5tts. Byter till styckesl\u00e4get. Vissa textniv\u00e5regler kommer inte att fungera.
-loExtSwitchOffMessage = LanguageTool \u00e4r avst\u00e4ngt. Sl\u00e5 p\u00e5 det igen f\u00f6r att granska texten.
-loDialogUnsupported = Grammatikkontrollen st\u00f6der inte inb\u00e4ddade objekt som grafik, bilder eller textobjekt. \nPlacera mark\u00f6ren i textytan och \u00f6ppna dialogen igen.
-loNextErrorUnsupported = Grammatikkontrollen st\u00f6der inte inb\u00e4ddade objekt som grafik, bilder eller textobjekt. \nPlacera mark\u00f6ren i textytan och s\u00f6k efter n\u00e4sta kontrollpunkt igen.
-loNoGrammarCheckWarning = Det verkar som den automatiska grammatikkontrollen \u00e4r avst\u00e4ngd. Aktivera "granska grammatik under tiden du skriver" under "Verktyg"/"Alternativ"/"Spr\u00e5kinst\u00e4llningar"/"Stavning och grammatik" och starta om LibreOffice/OpenOffice.
-loAboutLtDesc = Ditt skrivst\u00f6d
-loCopyToClipBoardDesc = Kopiera till Urklipp
-loOpenLogFolderDesc = \u00d6ppna loggmappen
-loVersionInformation = Versionsinformation
-loStatisticalAnalysis = Statistisk analys
-loStatisticalAnalysisCloseButton = St\u00e4ng
-loStatisticalAnalysisDefaultButton = Standard
-loStatisticalAnalysisSetButton = St\u00e4ll in
-loStatisticalAnalysisWithoutDirectSpreech = Utan direkt anf\u00f6rande
-loStatisticalAnalysisChapterLabel = Kapitel
-loStatisticalAnalysisSubchapterLabel = Underkapitel
-loStatisticalAnalysisMostUsedWords = Mest anv\u00e4nda ord
-loStatisticalAnalysisOptionsLabel = Inst\u00e4llningar
-loStatisticalAnalysisLevels = Niv\u00e5er / texttyp
-loStatisticalAnalysisIgnoreWordButton = Ignorera ord
-loStatisticalAnalysisResetIgnoredWordsButton = \u00c5terst\u00e4ll ignorerade ord
-loStatisticalAnalysisEntireDocument = Hela dokumentet
-loStatisticalAnalysisNotAnalyzed = Inte analyserade
-loStatisticalAnalysisNumber = Antal
+crh = Crimean Tatar
